@@ -13945,21 +13945,3129 @@ public class URLDemo02 {
 
 ## 多线程
 
+### 1.线程简介
+
+#### 1.多任务
+
+![1623469127552](img/SE/09/1623469127552.png)
+
+- 现实中太多这样同时做多件事情的例子了，看起来是多个任务都在做，其实本质上我们的大脑在同一时间依旧只做了一件事情。 
+
+#### 2.多线程
+
+![1623469294789](img/SE/09/1623469294789.png)
+
+- 原来是一条路，慢慢因为车太多了，道路阻塞，效率极低。为了提高使用的效率，能够充分利用道路，于是加了多个车道。从此，妈妈再也不用担心道路阻塞了。 
+- 普通方法调用和多线程
+
+![1623469442917](img/SE/09/1623469442917.png)
+
+#### 3.程序.进程.线程
+
+![1623469608093](img/SE/09/1623469608093.png)
+
+- 一个进程可以有多个线程，如视频中同时听声音，看图像，看弹幕，等等。
+
+#### 4.Process与Thread
+
+- 说起进程,就不得不说下程序。**程序**是指令和数据的有序集合，其本身没有任何运行的含义，是一个静态的概念。
+
+- 而**进程**则是执行程序的依次执行过程，它是一个动态的概念。是系统资源分配的单位。
+
+- 通常在一个进程中可以包含若干个**线程**，当然一个进程中至少有一个线程，不然没有存在的意义。线程是CPU调度和执行的单位。
+
+**注意**：
+
+- 很多多线程是模拟出来的，真正的多线程是指有多个cpu，即多核，如服务器。如果是模拟出来的多线程，即在一个cpu的情况下，在同一个时间点，cpu只能执行一个代码，因为切换的很快，所以就有同时执行的错局。
+
+#### 5.核心概念
+
+- 线程就是独立的执行路径。
+- 在程序运行时,即使没有自己创建线程,后台也会有多个线程,比如主线程,GC线程。
+- main()称之为主线程,为系统的入口,用于执行整个程序。
+- 在一个进程中,如果开辟了多个线程,线程的运行是由调度器（cpu）安排调度的,调度器是与操作系统紧密相关的,先后顺序是不能人为干预的。
+- 对同一份资源操作时mm会存在资源抢夺的问题,需要加入并发控制。
+- 线程会带来额外的开销,如CPU调度时间,并发控制开销。
+- 每个线程在自己的工作内存交互,内存控制不当会造成数据不一致。
+
+### 2.线程实现
+
+#### 1.线程的创建(三种方式)
+
+> 1.1 继承Thread类**（重要）**
+>
+> - 自定义线程类继承`Thread`类；
+> - 重写`run()`方法，编写线程执行体；
+> - 创建线程对象，调用`start()`方法启动线程。
+
+```java
+package github.smt.demo01;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 08:29
+ */
+// 创建线程方式一：继承Thread类，重写run()方法，调用start开启线程
+public class TestThread extends Thread{
+    // run()方法线程体
+    @Override
+    public void run() {
+        for (int i = 0; i < 20; i++) {
+            System.out.println("我在阅读代码-----" + i);
+        }
+    }
+
+    // main线程
+    public static void main(String[] args) {
+        // 创建一个线程对象
+        TestThread thread = new TestThread();
+        // 调用start()开启线程
+        thread.start();
+
+        for (int i = 0; i < 200; i++) {
+            System.out.println("多线程学习中……" + i);
+        }
+    }
+}
+```
+
+- 小结：线程不一定立即执行，CPU安排调度。
+
+```java
+package github.smt.demo01;
+
+import org.apache.commons.io.FileUtils;
+
+import java.io.File;
+import java.io.IOException;
+import java.net.URL;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 08:41
+ */
+// 练习Thread，实现多线程同步下载图片
+public class TestThread02 extends Thread{
+    private String url;
+    private String name;
+
+    // 有参构造
+    public TestThread02(String url,String name) {
+        this.url = url;
+        this.name = name;
+    }
+
+    // 下载图片的执行体
+    @Override
+    public void run() {
+        WebDownloader webDownloader = new WebDownloader();
+        webDownloader.downloader(url,name);
+        System.out.println("下载的文件：" + name);
+    }
+
+    public static void main(String[] args) {
+        TestThread02 t1 = new TestThread02("http://browser9.qhimg.com/bdm/768_474_0/t010824ab8b5cdfa138.jpg","str.png");
+        TestThread02 t2 = new TestThread02("http://browser9.qhimg.com/bdm/768_474_0/t012468d019e3ce466b.jpg","str2.png");
+        TestThread02 t3 = new TestThread02("http://browser9.qhimg.com/bdm/384_237_0/t01039b44f7c7ca5ca3.jpg","str3.png");
+
+        t1.start();
+        t2.start();
+        t3.start();
+
+    }
+}
+// 下载器
+class WebDownloader{
+    // 下载方法
+    public void downloader(String url,String name){
+        try {
+           FileUtils.copyURLToFile(new URL(url),new File(name));
+        }catch (IOException e){
+            e.printStackTrace();
+            System.out.println("IO异常，downloader下载方法异常");
+        }
+    }
+}
+```
+
+![1623479315474](img/SE/09/1623479315474.png)
+
+- 如果没有FileUtils.copyURLToFile方法，可以在[maven官网下载jar包](https://mvnrepository.com/artifact/commons-io/commons-io/2.6)，按照下图导入即可。
+
+  ![1623477886152](img/SE/09/1623477886152.png)
+
+>1.2 实现Runnable接口
+>
+>- **推荐使用Runnable对象,因为Java单继承的局限性**；
+>- 自定义线程类实现`Runnable`接口；
+>- 实现`run()`方法,编写线程执行体；
+>- 创建线程对象,调用`start()`方法启动对象。
+
+```java
+package github.smt.demo01;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 08:41
+ */
+// 练习Thread，实现多线程同步下载图片
+public class TestThread03 implements Runnable{
+
+    @Override
+    public void run() {
+        // run方法线程体
+        for (int i = 0; i < 20; i++) {
+            System.out.println("我在看代码-----" + i);
+        }
+    }
+
+    public static void main(String[] args) {
+        // 创建runnable接口的实现类对象
+        TestThread03 thread03 = new TestThread03();
+
+        // 创建线程对象，通过线程对象来开启我们的线程，代理
+        Thread thread = new Thread(thread03);
+
+        // 调用start()开启线程
+        thread.start();
+
+        for (int i = 0; i < 200; i++) {
+            System.out.println("我在学习多线程……" + i);
+        }
+    }
+}
+```
+
+```java
+package github.smt.demo01;
+
+/**
+ * 多个线程同时操作同一个对象  买火车票案例
+ * @author subeiLY
+ * @create 2021-06-07 08:51
+ */
+// 发现问题:多个线程操作同一个资源的情况下,线程不安全,数据紊乱
+public class TestThread04 implements Runnable{
+    // 票数
+    private int ticketNums = 10;
+
+    public static void main(String[] args) {
+        TestThread04 thread04 = new TestThread04();
+        new Thread(thread04,"张三").start();
+        new Thread(thread04,"李四").start();
+        new Thread(thread04,"王五").start();
+        new Thread(thread04,"赵六").start();
+
+    }
+
+    @Override
+    public void run() {
+        while (true){
+            if(ticketNums <= 0){
+                break;
+            }
+            // 捕获异常
+            try {
+                Thread.sleep(200);
+            }catch (InterruptedException e){
+                e.printStackTrace();
+            }
+            System.out.println(Thread.currentThread().getName() + "---》拿到了第" + ticketNums-- + "张票");
+        }
+    }
+}
+```
+
+![1623484129638](img/SE/09/1623484129638.png)
+
+```java
+package github.smt.demo01;
+
+/**
+ * 模拟龟兔赛跑
+ * @author subeiLY
+ * @create 2021-06-07 08:58
+ */
+public class TestThread05 implements Runnable{
+    // 胜利者
+    private static String winner;
+
+    public static void main(String[] args) {
+        TestThread05 thread05 = new TestThread05();
+        new Thread(thread05,"兔子").start();
+        new Thread(thread05,"乌龟").start();
+    }
+
+    @Override
+    public void run() {
+        for (int i = 0; i <= 100; i++) {
+            // 模拟兔子休息
+            if(Thread.currentThread().getName().equals("兔子") && i%10==0){
+                try {
+                    Thread.sleep(1);
+                }catch (InterruptedException e){
+                    e.printStackTrace();
+                }
+            }
+            // 判断比赛是否结束
+            boolean flag = gameOver(i);
+            // 如果比赛结束，停止程序
+            if(flag){
+                break;
+            }
+            System.out.println(Thread.currentThread().getName() + "---》跑了" + i + "步");
+        }
+    }
+
+    // 判断比赛是否结束
+    private boolean gameOver(int steps){
+        if(winner != null){
+            return true;
+        }else{
+            if(steps >= 100){   // 一共100步
+                winner = Thread.currentThread().getName();
+                System.out.println("winner is " + winner);
+                return true;
+            }
+        }
+        return false;
+    }
+}
+```
+
+![1623548052550](img/SE/09/1623548052550.png)
+
+> 1.3 实现Callable接口（了解）
+>
+> - 实现Callable接口，需要返回值类型；
+> - 重写call方法，需要抛出异常；
+> - 创建目标对象；
+> - 创建执行服务：ExecutorService ser = Executors.newFixedThreadPool(1);
+> - 提交执行：Future result1 = ser.submit(11);
+> - 获取结果：boolean r1 = result1.get();
+> - 关闭服务：ser.shutdownNow();
+
+```java
+package github.smt.demo01;
+
+import java.util.concurrent.*;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 09:04
+ */
+// 图片下载案例
+public class TestThread06 implements Callable<Boolean> {
+    private String url;     // 网络图片地址
+    private String name;    // 报错的文件名
+
+    // 有参构造
+    public TestThread06(String url,String name){
+        this.url = url;
+        this.name = name;
+    }
+
+    public static void main(String[] args) throws ExecutionException,InterruptedException {
+        TestThread06 p1 = new TestThread06("http://browser9.qhimg.com/bdm/768_474_0/t010824ab8b5cdfa138.jpg", "ptr.png");
+        TestThread06 p2 = new TestThread06("http://browser9.qhimg.com/bdm/768_474_0/t012468d019e3ce466b.jpg", "ptr02.png");
+        TestThread06 p3 = new TestThread06("http://browser9.qhimg.com/bdm/384_237_0/t01039b44f7c7ca5ca3.jpg", "ptr03.png");
+
+        // 执行服务
+        ExecutorService service = Executors.newFixedThreadPool(3);
+
+        // 提交执行
+        Future<Boolean> submit = service.submit(p1);
+        Future<Boolean> submit1 = service.submit(p2);
+        Future<Boolean> submit2 = service.submit(p3);
+
+        // 获取结果
+        boolean aBoolean = submit.get();
+        boolean aBoolean1 = submit1.get();
+        boolean aBoolean2 = submit2.get();
+
+        // 关闭服务
+        service.shutdownNow();
+    }
+
+    // 下载图片线程的执行体
+    @Override
+    public Boolean call() throws Exception {
+        WebDownloader webDownloader = new WebDownloader();
+        webDownloader.downloader(url,name);
+        System.out.println("下载的文件：" + name);
+        return true;
+    }
+}
+```
+
+![1623548683798](img/SE/09/1623548683798.png)
+
+> 1.4Thread和Runnable对比
+>
+> - 继承Thred类:
+>   - 子类继承Thread类具备多线程能力；
+>   - 启动线程:子类对象.start()；
+>   - ==不建议使用:避免OOP单继承局限性==。
+>
+> - 实现Runnable接口
+>   - 实现接口Runnable具有多线程能力；
+>   - 启动线程:传入目标对象+Thread对象.start()；
+>   - ==推荐使用:避免单继承局限性,灵活方便,方便同一个对象被多个线程使用==。
+
+#### 2.静态代理
+
+![1623554207217](img/SE/09/1623554207217.png)
+
+```java
+package github.smt.demo02;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 09:14
+ */
+public class TestStaticProxy {
+    public static void main(String[] args) {
+        WeddingCompany company = new WeddingCompany(new You());
+        company.happyMary();
+    }
+}
+
+// 结婚
+interface Marry{
+    void happyMary();
+}
+
+// 真实角色：你去结婚
+class You implements Marry{
+    @Override
+    public void happyMary() {
+        System.out.println("subei结婚了……");
+    }
+}
+
+// 代理角色:婚庆公司帮你结婚
+class WeddingCompany implements Marry{
+    private Marry target;   // 代理--->真实目标角色，帮谁结婚
+
+    public WeddingCompany(Marry target){
+        this.target = target;
+    }
+
+    @Override
+    public void happyMary() {
+        after();
+        this.target.happyMary();
+        before();
+    }
+
+    private void after(){
+        System.out.println("结婚前，布置现场！");
+    }
+
+    private void before(){
+        System.out.println("结婚后，收尾款！");
+    }
+}
+```
+
+- 优化：使用线程，Lamda表达式。
+
+```java
+package github.smt.demo02;
+
+/**
+ * 线程中的代理模式
+ * @author subeiLY
+ * @create 2021-06-07 09:21
+ */
+public class TestStaticProxy02 {
+    public static void main(String[] args) {
+        new Thread(()-> System.out.println("因为爱情")).start();
+        new WeddingCompany(new You()).happyMary();
+    }
+}
+```
+
+- 总结
+  - 真实对象和代理对象都要实现一个接口；
+  - 代理对象要代理真实角色。
+- 好处
+  - 代理对象可以做很多真实对象做不了的事情；
+  - 真实对象专注做自己的事。
+
+#### 3.Lambda表达式
+
+![1623555592179](img/SE/09/1623555592179.png)
+
+- λ 希腊字母表中排序第十一位的字母，英语名称为 Lambda；
+- 避免匿名内部类定义过多；
+- 其实质属于函数式编程的概念；
+- 去掉了一堆没有意义的代码,只留下核心逻辑。
+
+> - (params)-> expression[表达式]
+>
+> - (params) -> statement[语句]
+>
+> - (params)-> {statements}
+>
+> ```java
+> a -> System.out.println("i like lamda-->"+a)
+> ```
+
+- new Thread (()->System.out.println(“多线程学习。。。。”)).start()；
+- 理解Functional Interface (函数式接口) 是学习Java 8 lambda表达式的关键
+
+> 函数式接口的定义
+
+- 任何接口，如果只包含唯一一个抽象方法，那么它就是一个函数式接口。
+
+```java
+public interface Runnable{
+    public abstract void run();
+}
+```
+
+- 对于函数式接口，我们可以通过Lambda表达式来创建该接口的对象。
+
+> 实现：
+
+- 案例1
+
+```java
+package github.smt.demo03;
+
+/**
+ * 推导lambda表达式
+ *
+ * @author subeiLY
+ * @create 2021-06-07 09:34
+ */
+public class TestLambda {
+    public static void main(String[] args) {
+        // 创建接口对象
+        Like like = new Like();
+        like.lambda();
+
+    }
+}
+
+// 1.定义一个函数式接口
+interface ILike{
+    void lambda();
+}
+
+// 2.实现类
+class Like implements ILike{
+    @Override
+    public void lambda(){
+        System.out.println("I like Lambda");
+    }
+}
+```
+
+- 优化一
+
+```java
+package github.smt.demo03;
+
+/**
+ * 推导lambda表达式
+ *
+ * @author subeiLY
+ * @create 2021-06-07 09:34
+ */
+public class TestLambda {
+    // 3.静态内部类
+    static class Like implements ILike{
+        @Override
+        public void lambda(){
+            System.out.println("I like Lambda2");
+        }
+    }
+
+    public static void main(String[] args) {
+        // 创建接口对象
+        Like like = new Like();
+        like.lambda();
+
+    }
+}
+
+// 1.定义一个函数式接口
+interface ILike{
+    void lambda();
+}
+```
+- 优化二
+
+```java
+package github.smt.demo03;
+
+/**
+ * 推导lambda表达式
+ *
+ * @author subeiLY
+ * @create 2021-06-07 09:34
+ */
+public class TestLambda {
+
+    public static void main(String[] args) {
+        // 4.局部内部类
+        class Like implements ILike{
+            @Override
+            public void lambda(){
+                System.out.println("I like Lambda3");
+            }
+        }
+
+        // 创建接口对象
+        Like like = new Like();
+        like.lambda();
+
+    }
+}
+
+// 1.定义一个函数式接口
+interface ILike{
+    void lambda();
+}
+```
+- 优化三
+
+```java
+package github.smt.demo03;
+
+/**
+ * 推导lambda表达式
+ *
+ * @author subeiLY
+ * @create 2021-06-07 09:34
+ */
+public class TestLambda {
+
+    public static void main(String[] args) {
+        
+        // 创建接口对象
+        ILike like = new ILike() {
+            // 5.匿名内部类，没有类的名称，必须借助接口或父类
+            @Override
+            public void lambda() {
+                System.out.println("I like Lambda4");
+            }
+        };
+        like.lambda();
+    }
+}
+
+// 1.定义一个函数式接口
+interface ILike{
+    void lambda();
+}
+```
+- 最终版
+
+```java
+package github.smt.demo03;
+
+/**
+ * 推导lambda表达式
+ *
+ * @author subeiLY
+ * @create 2021-06-07 09:34
+ */
+public class TestLambda {
+
+    public static void main(String[] args) {
+        // 6.简化
+        ILike like = () ->{
+            System.out.println("I like Lambda5");
+        };
+        like.lambda();
+    }
+}
+
+// 1.定义一个函数式接口
+interface ILike{
+    void lambda();
+}
+```
+
+- 案例二
+
+```java
+package github.smt.demo03;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 09:44
+ */
+public class TestLambda02 {
+    public static void main(String[] args) {
+        // 1.lambda
+        ILove love = (int a)->{
+            System.out.println("I love you -->" + a);
+        };
+        // 2.lambda简化1.0
+        love = (a) ->{
+            System.out.println("I love you --> " + a);
+        };
+        // 3.lambda简化2.0
+        love = a ->{
+            System.out.println("I love you --> " + a);
+        };
+        // 4.lambda简化4.0
+        love = a -> System.out.println("I love you --> " +a);
+
+        /**
+         * 总结：
+         * {}简略的条件是只能有一行代码,多行{}就不能简略了
+         * 前提是接口为函数式接口(只能有一个方法)
+         * 多个参数也可以去掉参数类型,要去掉就都去掉,必须加上()
+         */
+        love.love(520);
+    }
+}
+
+// 1.定义一个函数式接口
+interface ILove{
+    void love(int a);
+}
+```
+
+### 3.线程状态
+
+#### 1 线程的五大状态
+
+![1623585131064](img/SE/09/1623585131064.png)
+
+![1623585325311](img/SE/09/1623585325311.png)
+
+#### 2.线程方法
+
+![1623585355158](img/SE/09/1623585355158.png)
+
+> 停止线程
+
+![1623585629251](img/SE/09/1623585629251.png)
+
+```java
+package github.smt.demo03;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 09:58
+ */
+
+/**
+ * 测试stop
+ * 1.建议线程正常停止-->利用次数,不建议死循环
+ * 2.建议使用标志位-->设置一个标志位
+ * 3.不要使用stop或者destroy等过时或者JDK不建议使用的方法
+ */
+
+public class TestStopThread implements Runnable{
+    // 1.设置一个标志位
+    private boolean flag = true;
+
+    public static void main(String[] args) {
+        TestStopThread stop = new TestStopThread();
+        new Thread(stop).start();
+        for (int i = 0; i < 1000; i++) {
+            System.out.println("main...." + i);
+            if(i==900){
+                // 调用stop()切换标志位,让线程终止
+                stop.stop();
+                System.out.println("线程该停止了");
+            }
+        }
+    }
+
+    @Override
+    public void run() {
+        int i = 0;
+        while(flag){
+            System.out.println("run……Thread" + i++);
+        }
+    }
+
+    // 2.设置一个公开的方法停止线程，转换标志位
+    public void stop(){
+        this.flag = false;
+    }
+}
+```
+
+> 线程休眠
+
+![1623586005041](img/SE/09/1623586005041.png)
+
+```java
+package github.smt.demo03;
+
+import github.smt.demo01.TestThread04;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 10:03
+ */
+
+// 模拟网络延迟:放大问题的发生性
+public class TestSleepThread02 implements Runnable{
+    // 票数
+    private int ticketNums = 10;
+
+    public static void main(String[] args) {
+        TestThread04 thread04 = new TestThread04();
+        new Thread(thread04,"张三").start();
+        new Thread(thread04,"李四").start();
+        new Thread(thread04,"王五").start();
+        new Thread(thread04,"赵六").start();
+
+    }
+
+    @Override
+    public void run() {
+        while (true){
+            if(ticketNums <= 0){
+                break;
+            }
+            // 捕获异常
+            try {
+                Thread.sleep(200);
+            }catch (InterruptedException e){
+                e.printStackTrace();
+            }
+            System.out.println(Thread.currentThread().getName() + "---》拿到了第" + ticketNums-- + "张票");
+        }
+    }
+}
+```
+
+```java
+package github.smt.demo04;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 10:05
+ */
+public class TestSleepThread {
+    public static void main(String[] args) {
+        try {
+            tenDown();
+        } catch (InterruptedException e){
+            e.printStackTrace();
+        }
+    }
+    
+    // 模拟倒计时
+    public static void tenDown() throws InterruptedException{
+        int num = 10;
+        while(true){
+            Thread.sleep(1000);
+            System.out.println(num--);
+            if(num<=0){
+                break;
+            }
+        }
+    }
+}
+```
+
+```java
+package github.smt.demo04;
+
+import java.text.SimpleDateFormat;
+import java.util.Date;
+
+/**
+ * 每一秒获取当前时间
+ * @author subeiLY
+ * @create 2021-06-07 10:10
+ */
+public class TestSleepThread02 {
+    public static void main(String[] args) {
+        // 获取当前系统时间
+        Date date = new Date(System.currentTimeMillis());
+        while(true){
+            try{
+                Thread.sleep(1000);
+                // 更新系统时间
+                System.out.println(new SimpleDateFormat("HH:mm:ss").format(date));
+                date = new Date(System.currentTimeMillis());
+            }catch (InterruptedException e){
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
+
+> 线程礼让
+
+![1623661322196](img/SE/09/1623661322196.png)
+
+```java
+package github.smt.demo04;
+
+/**
+ * 测试礼让线程
+ * @author subeiLY
+ * @create 2021-06-07 10:15
+ */
+public class TestThread {
+    public static void main(String[] args) {
+        MyYeild myYeild = new MyYeild();
+        new Thread(myYeild,"a").start();
+        new Thread(myYeild,"b").start();
+    }
+}
+
+class MyYeild implements Runnable{
+    @Override
+    public void run() {
+        System.out.println(Thread.currentThread().getName() + "线程开始执行");
+        Thread.yield(); // 礼让
+        System.out.println(Thread.currentThread().getName() + "线程停止执行");
+    }
+}
+```
+
+![1623661266412](img/SE/09/1623661266412.png)
+
+> 线程插队
+
+![1623662106820](img/SE/09/1623662106820.png)
+
+```java
+package github.smt.demo04;
+
+/**
+ * 插队
+ * @author subeiLY
+ * @create 2021-06-07 10:23
+ */
+public class TestJoinThread implements Runnable{
+    public static void main(String[] args) throws InterruptedException{
+        // 启动线程
+        TestJoinThread joinThread = new TestJoinThread();
+        Thread thread = new Thread(joinThread);
+        thread.start();
+
+        // 主线程
+        for (int i = 0; i < 500; i++) {
+            if(i==200){
+                thread.join();  // 插队
+            }
+            System.out.println("main" + i);
+        }
+    }
+
+    @Override
+    public void run() {
+        for (int i = 0; i < 500; i++) {
+            System.out.println("线程VIP" + i);
+        }
+    }
+}
+```
+
+#### 3.线程状态观测
+
+![1623812796448](img/SE/09/1623812796448.png)
+
+```java
+package github.smt.demo05;
+
+/**
+ * 观察测试线程状态
+ * @author subeiLY
+ * @create 2021-06-07 10:37
+ */
+public class TestThreadState {
+    public static void main(String[] args) throws InterruptedException{
+        Thread thread = new Thread(() -> {
+            for (int i = 0; i < 5; i++) {
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException e){
+                    e.printStackTrace();
+                }
+            }
+            System.out.println("--------------");
+        });
+        // 观察状态
+        Thread.State state = thread.getState();
+        System.out.println(state);
+        
+        // 观察启动后
+        thread.start();
+        state = thread.getState();
+        System.out.println(state);     // Run
+        while (state != Thread.State.TERMINATED){
+            // 只要线程不终止，就一直输出状态
+            Thread.sleep(100);
+            state = thread.getState();  // 更新线程状态
+            System.out.println(state);
+        }
+        // 死亡后的线程不能再启动了，启动会报异常
+//        thread.start();
+    }
+}
+```
+
+#### 4.线程优先级
+
+![1623814376260](img/SE/09/1623814376260.png)
+
+```java
+package github.smt.demo05;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 10:45
+ */
+public class TestThreadPriority {
+    public static void main(String[] args) {
+        // 主线程默认优先级
+        System.out.println(Thread.currentThread().getName()
+                + "-->" + Thread.currentThread().getPriority());
+
+        MyPriority myPriority = new MyPriority();
+        Thread thread1 = new Thread(myPriority);
+        Thread thread2 = new Thread(myPriority);
+        Thread thread3 = new Thread(myPriority);
+        Thread thread4 = new Thread(myPriority);
+        Thread thread5 = new Thread(myPriority);
+
+        // 先设置优先级，再启动
+        thread1.start();
+
+        thread2.setPriority(1);
+        thread2.start();
+
+        thread3.setPriority(4);
+        thread3.start();
+
+        // MAX_PRIORITY=10
+        thread4.setPriority(Thread.MAX_PRIORITY);
+        thread4.start();
+
+        thread5.setPriority(8);
+        thread5.start();
+
+    }
+}
+
+class MyPriority implements Runnable{
+    @Override
+    public void run() {
+        System.out.println(Thread.currentThread().getName()
+                + "-->" + Thread.currentThread().getPriority());
+    }
+}
+```
+
+![1623814821712](img/SE/09/1623814821712.png)
+
+#### 5.守护线程
+
+- 线程分为**用户线程**和**守护线程**；
+- 虚拟机必须确保用户线程执行完毕；
+- 虚拟机不用等待守护线程执行完毕；
+- 如，后台记录操作日志，监控内存垃圾回收等待……
+
+```java
+package github.smt.demo05;
+
+/**
+ * 测试守护线程
+ * @author subeiLY
+ * @create 2021-06-07 10:56
+ */
+public class TestDemoThread {
+    public static void main(String[] args) {
+        God god = new God();
+        You you = new You();
+
+        Thread thread = new Thread(god);
+        // 默认false表示是用户线程，正常线程都是用户线程
+        thread.setDaemon(true);
+        // 耶稣守护线程启动
+        thread.start();
+        // 你 用户线程启动
+        new Thread(you).start();
+    }
+}
+
+class God implements Runnable{
+
+    @Override
+    public void run() {
+        while (true){
+            System.out.println("耶稣都救不了你！");
+        }
+    }
+}
+
+class You implements Runnable{
+
+    @Override
+    public void run() {
+        System.out.println("------你好，世界！------");
+        for (int i = 0; i < 36500; i++) {
+            System.out.println("每天都很开心！");
+        }
+        System.out.println("------再见，世界！------");
+    }
+}
+```
+
+### 4.线程同步
+
+#### 1.介绍
+
+- **多个线程操作同一个资源 **
+- 并发：同一个对象被多个线程同时操作
+
+![1623816790367](img/SE/09/1623816790367.png)
+
+> 线程同步：
+>
+> - 现实生活中我们会遇到“同—个资源，多个人都想使用”的问题，比如食堂排队打饭，每个人都想吃饭，最天然的解決办法就是：排队，一个个来。
+> - 处理多线程问题时，多个线程访问同一个对象，并且某些线程还想修改这个对象这时候我们就需要线程同步。线程同步其实就是一种等待机制，多个需要同时访问此对象的线程进入这个==对象的等待池形==成队列，等待前面线程使用完毕，下一个线程再使用。
+
+- 队列和锁
+
+![1623816984585](img/SE/09/1623816984585.png)
+
+> 线程同步：
+>
+> - 由于同一进程的多个线程共享同一块存储空间，在带来方便的同时，也带来了访问冲突问题，为了保证数据在方法中被访问时的正确性，在访问时加入锁机制synchronized，当一个线程获得对象的排它锁，独占资源，其他线程必须等待使用后释放锁即可。存在以下问题：
+>   - 一个线程持有锁会导致其他所有需要此锁的线程挂起；
+>   - 在多线程竞争下，加锁，释放锁会导致比较多的上下文切换和调度延时，引起性能问题；
+>   - 如果一个优先级高的线程等待个优先级低的线程释放锁会导致优先级倒置，引起性能问题。
+
+#### 2.不安全的线程案例
+
+```java
+package github.smt.demo05;
+
+/**
+ * 不安全买票
+ * @author subeiLY
+ * @create 2021-06-07 11:08
+ */
+public class TestUnsafeBuyTicket {
+    public static void main(String[] args) {
+        BuyTicket buyTicket = new BuyTicket();
+        new Thread(buyTicket,"张三").start();
+        new Thread(buyTicket,"李四").start();
+        new Thread(buyTicket,"王五").start();
+    }
+}
+
+class BuyTicket implements Runnable{
+    // 票
+    private int ticketNums = 10;
+    boolean flag = true;
+
+    @Override
+    public void run() {
+        // 买票
+        while(flag){
+            try{
+                buy();
+            } catch (Exception e){
+                e.printStackTrace();
+            }
+        }
+    }
+
+    // 买票
+    private void buy(){
+        // 判断是否有票
+        if(ticketNums <= 0){
+            flag = false;
+            return;
+        }
+        // 延迟
+        try{
+            Thread.sleep(1);
+        } catch (InterruptedException e){
+            e.printStackTrace();
+        }
+
+        // 买票
+        System.out.println(Thread.currentThread().getName()
+            + "拿到" + ticketNums--);
+    }
+}
+```
+
+![1623848511995](img/SE/09/1623848511995.png)
+
+```java
+package github.smt.demo05;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 11:21
+ */
+public class TestUnsafeBank {
+    public static void main(String[] args) {
+        Account account = new Account(100, "养老基金");
+        Drawing drawing = new Drawing(account, 60, "夸克");
+        Drawing same = new Drawing(account, 120, "same");
+        drawing.start();
+        same.start();
+    }
+}
+
+class Account{
+    int money;  // 余额
+    String cardName;    // 卡名
+
+    public Account(int money, String cardName) {
+        this.money = money;
+        this.cardName = cardName;
+    }
+}
+
+class Drawing extends Thread{
+    Account account;    // 账户
+    int drawingMoney;   // 取余额
+    int nowMoney;   // 个人手里的钱
+
+    public Drawing(Account account, int drawingMoney, String name) {
+        // super(name) =  父类构造方法(name)
+        super(name);
+        this.account = account;
+        this.drawingMoney = drawingMoney;
+    }
+
+    // 取钱
+    @Override
+    public void run(){
+        // 判断是否有钱
+        if (account.money - drawingMoney < 0) {
+            System.out.println(Thread.currentThread().getName() + "余额不足,不能进行取钱");
+            return;
+        }
+        try {
+            Thread.sleep(1000); // 放大问题的发生性
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        // 卡内金额 = 余额-个人手里的钱
+        account.money = account.money - drawingMoney;
+        // 个人手里的钱
+        nowMoney = nowMoney + drawingMoney;
+        System.out.println(account.cardName + "余额为:" + account.money);
+        // this.getName()==Thread.currentThread().getName()
+        System.out.println(this.getName() + "手里的钱:" + nowMoney);
+    }
+}
+```
+
+![1623849494242](img/SE/09/1623849494242.png)
+
+```java
+package github.smt.demo05;
+
+import java.util.ArrayList;
+import java.util.List;
+
+/**
+ * 线程不安全的集合
+ * @author subeiLY
+ * @create 2021-06-07 11:27
+ */
+public class TestUnsafeList {
+    public static void main(String[] args) {
+        List<String> list = new ArrayList<>();
+        for (int i = 0; i < 1000; i++) {
+            new Thread(() ->{
+               list.add(Thread.currentThread().getName()) ;
+            }).start();
+        }
+        try {
+            Thread.sleep(3000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        System.out.println(list.size());
+    }
+}
+```
+
+#### 3.同步方法
+
+- 由于我们可以通过 private关键字来保证数据对象只能被方法访问，所以我们只需要针对方法提岀一套机制，这套机制就是syη chronized关键字，它包括两种用法synchronized方法和 synchronized块。
+  - 同步方法：public synchronized void method (int args) {}
+- synchronized方法控制对“对象"的访问，每个对象对应一把锁，每个synchronized方法都必须获得调用该方法的对象的锁才能执行，否则线程会阻塞，方法一旦执行，就独占该锁，直到该方法返回才释放锁，后面被阻塞的线程才能获得这个锁，继续执行。
+  - 缺陷：若将一个大的方法申明为 synchronized将会影响效率。
 
 
 
+```java
+package github.smt.demo05;
 
+/**
+ * 安全买票
+ * @author subeiLY
+ * @create 2021-06-07 11:08
+ */
+public class TestUnsafeBuyTicket {
+    public static void main(String[] args) {
+        BuyTicket buyTicket = new BuyTicket();
+        new Thread(buyTicket,"张三").start();
+        new Thread(buyTicket,"李四").start();
+        new Thread(buyTicket,"王五").start();
+    }
+}
 
+class BuyTicket implements Runnable{
+    // 票
+    private int ticketNums = 10;
+    boolean flag = true;
+
+    @Override
+    public void run() {
+        // 买票
+        while(flag){
+            try{
+                buy();
+            } catch (Exception e){
+                e.printStackTrace();
+            }
+        }
+    }
+
+    // synchronized 同步方法
+    // 买票
+    private synchronized void buy() {
+        // 判断是否有票
+        if(ticketNums <= 0){
+            flag = false;
+            return;
+        }
+        // 延迟
+        try{
+            Thread.sleep(1);
+        } catch (InterruptedException e){
+            e.printStackTrace();
+        }
+
+        // 买票
+        System.out.println(Thread.currentThread().getName()
+            + "拿到" + ticketNums--);
+    }
+}
+```
+
+![1623850589872](img/SE/09/1623850589872.png)
+
+#### 4.同步块
+
+- 同步块：synchronized (Obj) {}
+- obj称之为同步监视器
+  - Obj可以是任何对象，但是推存使用共享资源作为同步监视器。
+  - 同步方法中无需指定同步监视器，因为同步方法的同步监视器就是this，就是这个对象本身，或者是class。
+- 同步监视器的执行过程：
+  - 1.第一个线程访问，锁定同步监视器，执行其中代码；
+  - 2.第二个线程访问，发现同步监视器被锁定，无法访问；
+  - 3.第一个线程访问完毕，解锁同步监视器；
+  - 4.第二个线程访问，发现同步监视器没有锁，然后锁定并访问。
+
+==锁的对象就是变量的量,需要增删改查的对象==
+
+```java
+package github.smt.demo05;
+
+/**
+ * 安全的取钱 同步块
+ * @author subeiLY
+ * @create 2021-06-07 11:21
+ */
+public class TestUnsafeBank {
+    public static void main(String[] args) {
+        Account account = new Account(100, "养老基金");
+        Drawing drawing = new Drawing(account, 60, "夸克");
+        Drawing same = new Drawing(account, 120, "same");
+        drawing.start();
+        same.start();
+    }
+}
+
+class Account{
+    int money;  // 余额
+    String cardName;    // 卡名
+
+    public Account(int money, String cardName) {
+        this.money = money;
+        this.cardName = cardName;
+    }
+}
+
+class Drawing extends Thread{
+    Account account;    // 账户
+    int drawingMoney;   // 取余额
+    int nowMoney;   // 个人手里的钱
+
+    public Drawing(Account account, int drawingMoney, String name) {
+        // super(name) =  父类构造方法(name)
+        super(name);
+        this.account = account;
+        this.drawingMoney = drawingMoney;
+    }
+
+    // 取钱
+    @Override
+    public void run() {
+        // 锁的对象就是变量的量,需要增删改查的对象
+        synchronized (account) {
+            // 判断是否有钱
+            if (account.money - drawingMoney < 0) {
+                System.out.println(Thread.currentThread().getName() + "余额不足,不能进行取钱");
+                return;
+            }
+            try {
+                Thread.sleep(1000); // 放大问题的发生性
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            // 卡内金额 = 余额 - 个人手里的钱
+            account.money = account.money - drawingMoney;
+            // 个人手里的钱
+            nowMoney = nowMoney + drawingMoney;
+            System.out.println(account.cardName + "余额为:" + account.money);
+            // this.getName()==Thread.currentThread().getName()
+            System.out.println(this.getName() + "手里的钱:" + nowMoney);
+        }
+    }
+}
+```
+
+![1623850697467](img/SE/09/1623850697467.png)
+
+```java
+package github.smt.demo05;
+
+import java.util.ArrayList;
+import java.util.List;
+
+/**
+ * 线程安全的集合 同步块
+ * @author subeiLY
+ * @create 2021-06-07 11:27
+ */
+public class TestUnsafeList {
+    public static void main(String[] args) {
+        List<String> list = new ArrayList<>();
+        for (int i = 0; i < 1000; i++) {
+            new Thread(() ->{
+                synchronized (list) {
+                    list.add(Thread.currentThread().getName());
+                }
+            }).start();
+        }
+        try {
+            Thread.sleep(3000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        System.out.println(list.size());
+    }
+}
+```
+
+- JUC安全集合类型扩充
+
+```java
+package github.smt.demo05;
+
+import java.util.concurrent.CopyOnWriteArrayList;
+
+/**
+ * 测试JUC安全类型的集合
+ * @author subeiLY
+ * @create 2021-06-07 11:36
+ */
+public class TestThreadJuc {
+    public static void main(String[] args) {
+        CopyOnWriteArrayList<String> list = new CopyOnWriteArrayList<>();
+        for (int i = 0; i < 10000; i++) {
+            new Thread(() -> {
+                list.add(Thread.currentThread().getName());
+            }).start();
+        }
+        try{
+            Thread.sleep(3000);
+        } catch (InterruptedException e){
+            e.printStackTrace();
+        }
+        System.out.println(list.size());
+    }
+}
+```
+
+![1623852569868](img/SE/10/1623852569868.png)
+
+#### 5.死锁
+
+- 多个线程各自占有一些共享资源，并且互相等待其他线程占有的资源才能运行，而导致两个或者多个线程都在等待对方释放资源，都停止执行的情形。某一个同步块同时拥有“两个以上对象的锁"时，就可能会发生“死锁”的问题。
+
+```java
+package github.smt.demo06;
+
+/**
+ * 死锁:多个线程互相抱着对方需要的资源,然后形成僵持
+ * 解决:一个锁只锁一个对象
+ * @author subeiLY
+ * @create 2021-06-07 11:47
+ */
+public class TestDeadLock {
+    public static void main(String[] args) {
+        Makeup makeup = new Makeup(0, "黄焖鸡");
+        Makeup makeup1 = new Makeup(1, "牛肉土豆粉");
+
+        makeup.start();
+        makeup1.start();
+
+    }
+}
+
+// 鸭脖
+class DuckNeck{}
+
+// 土豆粉
+class PotatoPowder{}
+
+class Makeup extends Thread{
+    // 需要的资源只有一份,用static保证只有一份
+    static DuckNeck duckneck = new DuckNeck();
+    static PotatoPowder potatoPowder = new PotatoPowder();
+    int choice; // 选择
+    String foodName;    // 食品名称
+
+    public Makeup(int choice, String foodName) {
+        this.choice = choice;
+        this.foodName = foodName;
+    }
+
+    @Override
+    public void run() {
+        // 美食
+        try{
+            food();
+        } catch (InterruptedException e){
+            e.printStackTrace();
+        }
+    }
+
+    private void food() throws InterruptedException{
+        if(choice == 0){
+            synchronized (duckneck){    // 获得鸭脖的锁
+                System.out.println(this.foodName + "获得鸭脖的锁");
+                Thread.sleep(1000);
+                synchronized (potatoPowder){    // 一秒后想获得 土豆粉的锁
+                    System.out.println(this.foodName + "获得土豆粉的锁");
+                }
+            }
+        } else {
+            synchronized (duckneck){    // 获得鸭脖的锁
+                System.out.println(this.foodName + "获得鸭脖的锁");
+                Thread.sleep(2000);
+                synchronized (potatoPowder){    // 一秒后想获得 土豆粉的锁
+                    System.out.println(this.foodName + "获得土豆粉的锁");
+                }
+            }
+        }
+    }
+}
+```
+
+![1623913513865](img/SE/10/1623913513865.png)
+
+- 解决：
+
+```java
+package github.smt.demo06;
+
+/**
+ * 死锁:多个线程互相抱着对方需要的资源,然后形成僵持
+ * 解决:一个锁只锁一个对象
+ * @author subeiLY
+ * @create 2021-06-07 11:47
+ */
+public class TestDeadLock {
+    public static void main(String[] args) {
+        Makeup makeup = new Makeup(0, "黄焖鸡");
+        Makeup makeup1 = new Makeup(1, "牛肉土豆粉");
+
+        makeup.start();
+        makeup1.start();
+
+    }
+}
+
+// 鸭脖
+class DuckNeck{}
+
+// 土豆粉
+class PotatoPowder{}
+
+class Makeup extends Thread{
+    // 需要的资源只有一份,用static保证只有一份
+    static DuckNeck duckneck = new DuckNeck();
+    static PotatoPowder potatoPowder = new PotatoPowder();
+    int choice; // 选择
+    String foodName;    // 食品名称
+
+    public Makeup(int choice, String foodName) {
+        this.choice = choice;
+        this.foodName = foodName;
+    }
+
+    @Override
+    public void run() {
+        // 美食
+        try{
+            food();
+        } catch (InterruptedException e){
+            e.printStackTrace();
+        }
+    }
+
+    private void food() throws InterruptedException{
+        if(choice == 0){
+            synchronized (duckneck) {    // 获得鸭脖的锁
+                System.out.println(this.foodName + "获得鸭脖的锁");
+                Thread.sleep(1000);
+            }
+            synchronized (potatoPowder){    // 一秒后想获得 土豆粉的锁
+                System.out.println(this.foodName + "获得土豆粉的锁");
+            }            
+        } else {
+            synchronized (duckneck) {    // 获得鸭脖的锁
+                System.out.println(this.foodName + "获得鸭脖的锁");
+                Thread.sleep(2000);
+            }
+            synchronized (potatoPowder){    // 一秒后想获得 土豆粉的锁
+                System.out.println(this.foodName + "获得土豆粉的锁");
+            }
+        }
+    }
+}
+```
+
+> 避免死锁的办法
+
+- 产生死锁的四个必要条件
+  - 1.互斥条件：一个资源毎次只能被一个进程使用。
+  - 2.请求与保持条件：一个进程因请求资源而阻塞时，对已获得的资源保持不放。
+  - 3.不剥夺条件∶进程已获得的资源，在末使用完之前，不能强行剥夺。
+  - 4.循环等待条件：若干进程之间形成一种头尾相接的循环等待资源关系。
+- 上面列出了死锁的四个必要条件，我们只要想办法破其中的任意一个或多个条件就可以避免死锁发生。
+
+#### 6.Lock(锁) 
+
+- 从JDK 5.0开始, Java提供了更强大的线程同步机制一通过显式定义同步锁对象来实现同步。同步锁使用Lock对象充当。
+- java.util.concurrent.locks.Lock接口是控制多个线程对共享资源进行访问的工具。锁提供了对共享资源的独占访问，每次只能有一个线程对Lock对象加锁，线程开始访问共享资源之前应先获得Lock对象。
+- ReentrantLock 类实现了 Lock，它拥有与 synchronized 相同的并发性和内存语义，在实现线程安全的控制中，比较常用的是ReentrantLock, 可以显式加锁、释放锁。
+
+```java
+class A{
+    private final Reentrantlock lock new Reen TrantLock();
+    public void m(){
+        lock.lock();
+        try{
+            // 保证线程安全的代码
+        }
+        finally{
+            lock.unlock();	// 如果同步代码有异常，要将unlock()写入finally语句块
+        } 
+    }
+} 
+```
+
+```java
+package github.smt.demo06;
+
+import java.util.concurrent.locks.ReentrantLock;
+
+/**
+ * 测试Lock锁
+ * @author subeiLY
+ * @create 2021-06-07 13:09
+ */
+public class TestThreadLock {
+    public static void main(String[] args) {
+        TestLock testLock = new TestLock();
+        new Thread(testLock).start();
+        new Thread(testLock).start();
+        new Thread(testLock).start();
+    }
+}
+
+class TestLock implements Runnable{
+    int tickerNums = 10;
+    // 定义Lock锁
+    private final ReentrantLock lock = new ReentrantLock();
+
+    @Override
+    public void run() {
+        while(true){
+            // 加锁
+            try{
+                lock.lock();
+                if(tickerNums <= 0){
+                    break;
+                }
+                try{
+                    Thread.sleep(1000);
+                } catch (InterruptedException e){
+                    e.printStackTrace();
+                }
+                System.out.println(tickerNums--);
+            } catch (Exception e){
+                e.printStackTrace();
+            } finally {
+                // 解锁
+                lock.unlock();
+            }
+        }
+    }
+}
+
+```
+
+![1623913952678](img/SE/10/1623913952678.png)
+
+#### 7.synchroized与Lock对比
+
+- Lock是显式锁 (手动开启和关闭锁，别忘记关闭锁) synchronized是隐式锁, 出了作用域自动释放。
+- Lock只有代码块锁, synchronized有代码块锁和方法锁。
+- 使用Lock锁，JVM将花费较少的时间来调度线程, 性能更好。并且具有更好的扩展性 (提供更多的子类)。
+- 优先使用顺序:
+  - Lock > 同步代码块 (已经进入了方法体，分配了相应资源 $)>$ 同步方法 (在方法体之外)
+
+### 5.线程通信问题
+
+- 应用场景 : 生产者和消费者问题
+  - 假设仓库中只能存放一件产品 , 生产者将生产出来的产品放入仓库，消费者将仓库中产品取走消费。
+  - 如果仓库中没有产品 , 则生产者将产品放入仓库，否则停止生产并等待，直到仓库中的产品被消费者取走为止。
+  - 如果仓库中放有产品 , 则消费者可以将产品取走消费，否则停止消费并等待，直到仓库中再次放入产品为止。
+
+![1623852340740](img/SE/10/1623852340740.png)
+
+#### 1.线程通信方法
+
+- Java提供了几个方法解决线程之间的通信问题。
+
+|       方法名       | 作用                                                         |
+| :----------------: | ------------------------------------------------------------ |
+|       wait()       | 表示线程一直等待，直到其他线程通知，与sleep不同会释放锁。    |
+| wait(long timeout) | 指定等待的毫秒数。                                           |
+|      notify()      | 唤醒一个处于等待状态的线程。                                 |
+|    notifyAll()     | 唤醒同一个对象上所有调用wait()方法的线程，优先级别高的线程优先调度。 |
+
+- 注意：均是 Object类的方法，都只能在同步方法或者同步代码块中使用，否则会抛出异常IIIegalMonitorStateException。
+- 这是一个线程同步问题，生产者和消费者共享同一个资源，并且生产者和消费者之间相互依赖，互为条件：
+  - 对于生产者，没有生产产品之前，要通知消费者等待。而生产了产品之后，又需要马上通知消费者消费。
+  - 对于消费者，在消费之后，要通知生产者已经结束消费，需要生产新的产品以供消费。
+  - 在生产者消费者问题中，仅有 synchronized是不够的：
+    - synchronized可阻止并发更新同一个共享资源，实现了同步；
+    - synchronized不能用来实现不同线程之间的消息传递通信。
+
+#### 2.线程通信问题解决方式
+
+> 解决方式一：
+>
+> - 并发协作模型“生产者/消费者模式”-->管程法：
+>   - 生产者∶负责生产数据的模块（可能是方法，对象，线程，进程）；
+>   - 消费者：负责处理数据的模块（可能是方法，对象，线程，进程）；
+>   - 缓冲区：消费者不能直接使用生产者的数据，他们之间有个“缓冲区”。
+> - 生产者将生产好的数据放入缓冲区，消费者从缓冲区拿出数据。
+
+```java
+package github.smt.demo06;
+
+/**
+ * 测试:生产者消费者模型-->利用缓冲区解决:管程法
+ * @author subeiLY
+ * @create 2021-06-07 13:22
+ */
+public class TestThreadPC {
+    public static void main(String[] args) {
+        SynContainer synContainer = new SynContainer();
+        new Producer(synContainer).start();
+        new Consumer(synContainer).start();
+    }
+}
+
+// 生产者
+class Producer extends Thread{
+    // 缓冲区
+    SynContainer container;
+
+    public Producer(SynContainer container) {
+        this.container = container;
+    }
+
+    // 生产
+    @Override
+    public void run() {
+        for (int i = 0; i < 100; i++) {
+            container.push(new Product(i));
+            System.out.println("生产了:" + i + "件产品。");
+        }
+    }
+}
+
+// 消费者
+class Consumer extends Thread{
+    // 缓冲区
+    SynContainer container;
+
+    public Consumer(SynContainer container) {
+        this.container = container;
+    }
+
+    // 消费
+    @Override
+    public void run() {
+        for (int i = 0; i < 100; i++) {
+            System.out.println("消费了:" + container.pop().id + "件产品。");
+        }
+    }
+}
+
+// 产品
+class Product{
+    int id; // 产品编号
+    public Product(int id){
+        this.id = id;
+    }
+}
+
+// 缓冲区
+class SynContainer {
+    // 需要一个容器大小
+    Product[] products = new Product[10];
+    // 容器计数器
+    int count = 0;
+
+    // 生产者放入产品
+    public synchronized void push(Product product) {
+        // 如果容器满了,需要等待消费者消费
+        /*
+        如果是if的话，假如消费者1消费了最后一个，
+        这是index变成0此时释放锁被消费者2拿到而不是生产者拿到，
+        这时消费者的wait是在if里所以它就直接去消费index-1下标越界，
+        如果是while就会再去判断一下index得值是不是变成0了
+        */
+        while (count == products.length) {
+            // 通知消费者消费,等待生产
+            try {
+                this.wait();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+        // 如果没有满,需要丢入产品
+        products[count] = product;
+        count++;
+        // 通知消费者消费
+        this.notifyAll();
+    }
+
+    // 消费者消费产品
+    public synchronized Product pop() {
+        // 判断是否能消费
+        while (count <= 0) {
+            // 等待生产者生产
+            try {
+                this.wait();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+        // 如果可以消费
+        count--;
+        Product product = products[count];
+        // 吃完了 通知生产者生产
+        this.notifyAll();
+        return product;
+    }
+}
+```
+
+![1623915140615](img/SE/10/1623915140615.png)
+
+> 解决方式二：
+>
+> - 并发协作模型“生产者/消费者模式”--->信号灯法。
+
+```java
+package github.smt.demo06;
+
+/**
+ * 测试:生产者消费者模型2-->信号灯法,标志位解决
+ * @author subeiLY
+ * @create 2021-06-07 13:38
+ */
+public class TestThreadPC02 {
+    public static void main(String[] args) {
+        TV tv = new TV();
+        new Player(tv).start();
+        new Watcher(tv).start();
+    }
+}
+
+// 生产者 --> 演员
+class Player extends Thread{
+    TV tv;
+
+    public Player(TV tv) {
+        this.tv = tv;
+    }
+
+    @Override
+    public void run() {
+        for (int i = 0; i < 20; i++) {
+            if(i%2==0){
+                this.tv.play("熊出没播放中……");
+            }else{
+                this.tv.play("开心消消乐……");
+            }
+        }
+    }
+}
+
+// 消费者 --> 观众
+class Watcher extends Thread{
+    TV tv;
+
+    public Watcher(TV tv) {
+        this.tv = tv;
+    }
+
+    @Override
+    public void run() {
+        for (int i = 0; i < 20; i++) {
+            tv.watch();
+        }
+    }
+}
+
+// 产品 --> 节目
+class TV{
+    /*
+    演员表演，观众等待 T
+    观众观看，演员等待 F
+     */
+    String voice; // 表演的节目
+    boolean flag = true;
+
+    // 表演
+    public synchronized void play(String voice){
+        if (!flag){
+            try{
+                this.wait();
+            } catch (InterruptedException e){
+                e.printStackTrace();
+            }
+        }
+
+        System.out.println("演员表演了:" + voice);
+        // 通知观众观看
+        this.notifyAll();   // 通知唤醒
+        this.voice = voice;
+        this.flag = !this.flag;
+    }
+
+    // 观看
+    public synchronized void watch(){
+        if(flag){
+            try{
+                this.wait();
+            } catch (InterruptedException e){
+                e.printStackTrace();
+            }
+        }
+        System.out.println("观看了:" + voice);
+        // 通知演员表演
+        this.notify();
+        this.flag = !this.flag;
+    }
+}
+```
+
+![1623917873398](img/SE/10/1623917873398.png)
+
+### 6.线程池
+
+- 背景：经常创建和销毁、使用量特别大的资源，比如并发情况下的线程，对性能影响很大。
+- 思路：提前创建好多个线程，放入线程池中，使用时直接获取，使用完放回池中。可以避免频繁创建销毁、实现重复利用。类似生活中的公共交通工具。
+- 好处：
+  - 提高响应速度（减少了创建新线程的时间）；
+  - 降低资源消耗（重复利用线程池中线程，不需要毎次都创建）；
+  - 便于线程管理（…）
+    - corePoolsize：核心池的大小；
+    - maximumPoolSize：最大线程数；
+    - keepAliveTime：线程没有任务时最多保持多长时间后会终止。
+- JDK 5.0起提供了线程池相关AP:ExecutorService和 Executors。
+- ExecutorService：真正的线程池接口。常见子类 ThreadPoolExecutor。
+  - void execute（ Runnable command）：执行任务命令，没有返回值，一般用来执行 Runnable；
+  - <T> Future<T> submit（ Callable<T>妇ask）：执行任务，有返回值，一般又来执行Callable；
+  - void shutdown（）：关闭连接池。
+- Executors：工具类、线程池的工厂类，用于创建并返回不同类型的线程池。
+
+```java
+package github.smt.demo06;
+
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
+/**
+ * 测试线程池
+ * @author subeiLY
+ * @create 2021-06-07 13:47
+ */
+public class TestThreadPool {
+    public static void main(String[] args) {
+        // 1.创建服务,创建线程池
+        // newFixedThreadPool(线程池大小)
+        ExecutorService service = Executors.newFixedThreadPool(10);
+
+        // 执行
+        service.execute(new MyThread());
+        service.execute(new MyThread());
+        service.execute(new MyThread());
+        service.execute(new MyThread());
+        service.execute(new MyThread());
+        service.execute(new MyThread());
+
+        // 关闭链接
+        service.shutdown();
+    }
+}
+
+class MyThread implements Runnable{
+    @Override
+    public void run() {
+        System.out.println(Thread.currentThread().getName());
+    }
+}
+```
+
+![1623918052143](img/SE/10/1623918052143.png)
 
 ## 注解和反射
 
+### 1.注解
+
+#### 1.注解入门
+
+- Annotation是jdk1.5开始引入的新技术。
+- Annotation的作用：
+  - 不是程序本身，可以对程序作出解释；
+  - 可以被其他程序（例如编译器）读取。
+
+- Annotation的格式
+  - “@注解名”，也可以带参数，例如：@SuppressWarnings(value=“unchcked”)
+- Annotation在哪里使用？
+  - 可以附加在package、class、method、field上，相当于给它们添加了额外的辅助信息，还可以通过反射机制编程实现对这些元数据的访问。
+
+```java
+package github.Annotation;
+
+/**
+ * 什么是注解？
+ * @author subeiLY
+ * @create 2021-06-07 14:02
+ */
+public class Test01 extends Object{
+    // Override 重写的注解
+    @Override
+    public String toString(){
+        return super.toString();
+    }
+}
+```
+
+#### 2.内置注解
+
+- @ Override：定义在 java. lang Override中，此注释只适用于修辞方法，表示一个方法声明打算重写超类中的另一个方法声明。
+- @ Deprecated：定义在 Java. lang. Deprecated中，此注释可以用于修辞方法，属性，类，表示不鼓励程序员使用这样的元素，通常是因为它很危险或者存在更好的选择。
+- @ SuppressWarnings：定义在 Java. lang. SuppressWarnings中，用来抑制编译时的警告信息。
+- 与前两个注释有所不同，你需要添加一个参数才能正确使用，这些参数都是已经定义好了的，我们选择性的使用就好了。
+  - @SuppressWarnings （ "all"）
+  - @SuppressWarnings （unchecked"）
+  - @ SuppressWarnings（value=f"unchecked"， " deprecation "）
+  - 等等……
+
+```java
+package github.Annotation.Demo01;
+
+import java.util.ArrayList;
+import java.util.List;
+
+/**
+ * 什么是注解？
+ * @author subeiLY
+ * @create 2021-06-07 14:02
+ */
+public class Test01 extends Object{
+    // Override 重写的注解
+    @Override
+    public String toString(){
+        return super.toString();
+    }
+
+    // @Deprecated 不推荐使用,但可以使用,或者存在更好的更新方式
+    @Deprecated
+    public static void test(){
+        System.out.println("Deprecated");
+    }
+
+    // @SuppressWarnings 镇压警告
+    @SuppressWarnings("all")
+    public void test01(){
+        List<String> list = new ArrayList<>();
+    }
+
+    public static void main(String[] args) {
+        test();
+    }
+}
+```
+
+#### 3.自定义注解
+
+- 元注解的作用就是负责注解其他注解，Java定叉了4个标准的meta- annotation类型，他们被用来提供对其他 annotation类型作说明。
+- 这些类型和它们所支持的类在 java. lang annotation包中可以找到。（@Target，@Retention，@Documented, @Inherited）
+  - @ Target：用于描述注解的使用范围（即被描述的注解可以用在什么地方）。
+  - @ Retention：表示需要在什么级别保存该注释信息，用于描述注解的生命周期。
+    - SOURCE < CLASS < RUNTIME
+  - @ Document：说明该注解将被包含在 Javadoc中。
+  - @ Inherited：说明子类可以继承父类中的该注解。
+
+```java
+package github.Annotation.Demo01;
+
+import java.lang.annotation.*;
+
+/**
+ * 测试元注解
+ * @author subeiLY
+ * @create 2021-06-07 14:09
+ */
+public class TestAnnotation {
+    @MyAnnotion
+    public void test(){
+
+    }
+}
+
+// 定义一个注解
+/*
+Target 注解可以用在什么地方
+ElementType.METHOD 方法上有效  ElementType.TYPE类上有效
+ */
+@Target(value = ElementType.METHOD)
+/*
+@Retention 在什么地方有效
+RUNTIME > CLASS > SOURCES
+ */
+@Retention(value = RetentionPolicy.RUNTIME)
+// @Documented 表示是否将我们的注解生成在Javadoc中
+@Documented
+// @Inherited 子类可以继承父类的注解
+@Inherited
+@interface MyAnnotion{
+
+}
+```
+
+> 自定义注解
+
+- 使用@ interface自定义注解时，自动继承了 java. lang annotation. Annotation接口。
+- 分析：
+  - @ interface用来声明一个注解，格式：public@ interface注解名{定义内容}
+  - 其中的每一个方法实际上是声明了一个配置参数；
+  - 方法的名称就是参数的名称。
+  - 返回值类型就是参数的类型（返回值只能是基本类型， Class, String,enum）
+  - 可以通过 defau来声明参数的默认值；
+  - 如果只有一个参数成员，一般参数名为vaue；
+  - 注解元素必须要有值，我们定义注解元素时，经常使用空字符串，0作为默认值
+
+```java
+package github.Annotation.Demo01;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+/**
+ * 自定义注解
+ * @author subeiLY
+ * @create 2021-06-07 14:16
+ */
+public class TestCustomAnnotation {
+    // 注解可以显示赋值,如果没有默认值,就必须给注解赋值
+    @MyAnnotation2(name = "王五")
+    public void test() {
+
+    }
+    
+    @MyAnnotion3("subei")
+    public void test2(){
+        
+    }
+}
+
+@Target(value = ElementType.METHOD)
+@Retention(value = RetentionPolicy.RUNTIME)
+@interface MyAnnotation2 {
+    // 注解的参数: 参数类型 + 参数名()
+    // String name();
+    String name() default "";
+
+    int age() default 0;
+
+    int id() default -1; // -1代表不存在
+
+    String[] schools() default {"暑假好长", "不想实习"};
+}
+
+@Target(value = ElementType.METHOD)
+@Retention(value = RetentionPolicy.RUNTIME)
+@interface MyAnnotion3{
+    String value();
+}
+```
+
+### 2.反射机制
+
+#### 1.Java反射机制概念
+
+>1. 静态 & 动态语言
+
+- 动态语言
+  - 是一类在运行时可以改变其结构的语言：例如新的函数、对象、甚至代码可以被引进，已有的函数可以被删除或是其他结构上的变化。通俗点说就是在运行时代码可以根据某些条件改变自身结构。
+  - 主要动态语言：Object-C、C#、 JavaScript、PHP、 Python等。
+- 静态语言
+  - 与动态语言相对应的，运行时结构不可变的语言就是静态语言。如Java、C、C++。
+  - Java不是动态语言，但Java可以称之为“准动态语言”。即Java有一定的动态性我们可以利用反射机制获得类似动态语言的特性。Java的动态性让编程的时候更加灵活。
+
+> 2. 反射机制概念
+
+- Reflection（反射）是Java被视为动态语言的关键，反射机制允许程序在执行期借助于 Reflection AP取得仼何类的内部信息，并能直接操作任意对象的内部属性及方法。
+  - Class c= Class.forName("java. lang String");
+- 加载完类之后，在堆內存的方法区中就产生了一个 Class类型的对象（一个类只有一个Cass对象），这个对象就包含了完整的类的结构信息。我们可以通过这个对象看到类的结构。这个对象就像一面镜子，透过这个镜子看到类的结构，所以，我们形象的称之为：反射。
+
+![1623982241943](img/SE/10/1623982241943.png)
+
+> 3. 反射机制研究与应用
+
+- Java反射机制提供的功能
+  - 在运行时判断任意一个对象所属的类；
+  - 在运行时构造任意一个类的对象；
+  - 在运行时判断任意一个类所具有的成员变量和方法；
+  - 在运行时获取泛型信息；
+  - 在运行时调用任意一个对象的成员变量和方法；
+  - 在运行时处理注解；
+  - 生成动态代理；
+  - ……
+
+>4. 反射机制优缺点
+
+- 优点：
+  - 可以实现动态创建对象和编译，体现出很大的灵活性。
+- 缺点
+  - 对性能有影响。使用反射基本上是一种解释操作，我们可以告诉JVM，我们希望做什么并且它满足我们的要求。这类操作总是慢于直接执行相同的操作。
+
+> 5. 实现
+
+```java
+package github.Annotation.Demo01;
+
+/**
+ * 什么叫反射
+ * @author subeiLY
+ * @create 2021-06-07 14:23
+ */
+public class Test02 {
+    public static void main(String[] args) throws ClassNotFoundException {
+        // 通过反射获取class对象
+        Class name = Class.forName("github.Annotation.Demo01.User");
+        System.out.println(name);
+
+        Class c1 = Class.forName("github.Annotation.Demo01.User");
+        Class c2 = Class.forName("github.Annotation.Demo01.User");
+        Class c3 = Class.forName("github.Annotation.Demo01.User");
+        Class c4 = Class.forName("github.Annotation.Demo01.User");
+
+        /*
+        一个类在内存中只有一个Class对象
+        一个类被加载后,类的整个结构都会被封装在Class对象中
+        public native int hashCode();返回该对象的hash码值
+        注：哈希值是根据哈希算法算出来的一个值，这个值跟地址值有关，但不是实际地址值。
+         */
+
+        System.out.println(c1.hashCode());
+        System.out.println(c2.hashCode());
+        System.out.println(c3.hashCode());
+        System.out.println(c4.hashCode());
+    }
+}
+
+// 实体类:pojo entity
+class User{
+    private int id;
+    private int age;
+    private String name;
+
+    public User() {
+    }
+
+    public User(int id, int age, String name) {
+        this.id = id;
+        this.age = age;
+        this.name = name;
+    }
+
+    public int getId() {
+        return id;
+    }
+
+    public void setId(int id) {
+        this.id = id;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public String toString() {
+        return "User{" +
+                "id=" + id +
+                ", age=" + age +
+                ", name='" + name + '\'' +
+                '}';
+    }
+}
+```
+
+![1623982850508](img/SE/10/1623982850508.png)
+
+#### 2.理解Class类并获取Class实例
+
+> 1. class类介绍
+
+- 在 Object类中定义了以下的方法，此方法将被所有子类继承
+  - public final Class getclass()
+- 以上的方法返回值的类型是一个 Class类，此类是Java反射的源头，实际上所谓反射从程序的运行结果来看也很好理解，即：可以通过对象反射求出类的名称。
+
+![1623982956599](img/SE/10/1623982956599.png)
+
+- 对象照镜子后可以得到的信息：某个类的属性、方法和构造器、某个类到底实现了哪些接口对于每个类而言，JRE都为其保留一个不变的Cass类型的对象。一个Class对象包含了特定某个结构（ class/interface/enum/annotation/ primitive type/void/[]）的有关信息。
+  - Class本身也是一个类；
+  - Class对象只能由系统建立对象；
+  - 一个加载的类在JVM中只会有一个Class实例；
+  - 一个Cass对象对应的是一个加载到JM中的一个class文件；
+  - 每个类的实例都会记得自己是由哪个Class实例所生成；
+  - 通过class可以完整地得到一个类中的所有被加载的结构；
+  - class类是 Reflection的根源，针对任何你想动态加载、运行的类，唯有先获得相应的Class对象。
+
+- class类的常用方法
+
+| 方法名                                    | 功能说明                                                     |
+| ----------------------------------------- | ------------------------------------------------------------ |
+| static ClassforName (String name)         | 返回指定类名name的class对象                                  |
+| Object newInstance ()                     | 调用缺省构造函数，返回 Class对象的一个实例                   |
+| getName ()                                | 返回此Class对象所表示的实体（类，接口，数组类或void）的名称。 |
+| Class getSuperClass ()                    | 返回当前class对象的父类的class对象                           |
+| Class[] getinterfaces ()                  | 获取当前 Class对象的接口                                     |
+| ClassLoader getclassLoader ()             | 返回该类的类加载器                                           |
+| Constructor getConstructors ()            | 返回一个包含某些 Constructor对象的数组                       |
+| Method getMothed (String name, Class...T) | 返回一个 Method对象，此对象的形参类型为paramType             |
+| Field[] getDeclaredFields ()              | 返回Field对象的一个数组                                      |
+
+> 2. 获取Class类的实例
+
+- 若已知具体的类，通过类的class属性获取，该方法最为安全可靠，程序性能最高。
+  - Class clazz=Person.class;
+- 已知某个类的实例，调用该实例的 getclass () 方法获取Class对象。
+  - Class clazz= person. getClass();
+- 已知一个类的全类名，且该类在类路径下，可通过class类的静态方法 forName（获取，可能抛出 ClassNotFound Exception。
+  - Class clazz Class forName（"demo01 Student");
+- 内置基本数据类型可以直接用类名.Type。
+- 还可以利用 Classloader。
+
+```java
+package github.Annotation.Demo01;
+
+/**
+ * 测试class类的创建方式有哪些
+ * @author subeiLY
+ * @create 2021-06-07 14:36
+ */
+public class TestCreateClass {
+    public static void main(String[] args) throws ClassNotFoundException {
+        Person person = new Student();
+        System.out.println("这个人是:" + person);
+
+        // 方式一:通过对象查询
+        Class c1 = person.getClass();
+        System.out.println(c1.hashCode());
+
+        // 方式二:forName获得
+        Class c2 = Class.forName("github.Annotation.Demo01.Student");
+        System.out.println(c2.hashCode());
+
+        // 方式三:通过类名.class获得
+        Class c3 = Student.class;
+        System.out.println(c3.hashCode());
+
+        // 方式四:基本类型的包装类都有一个Type
+        Class c4 = Integer.TYPE;
+        System.out.println(c4);
+
+        // 获得父类类型
+        Class c5 = c1.getSuperclass();
+        System.out.println(c5);
+
+    }
+}
+
+class Person{
+    String name;
+
+    public Person() {
+    }
+
+    public Person(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public String toString() {
+        return "Person{" +
+                "name='" + name + '\'' +
+                '}';
+    }
+}
+
+class Student extends Person{
+    public Student() {
+        this.name = "学生";
+    }
+}
+
+class Teacher extends Person{
+    public Teacher(){
+        this.name = "老师";
+    }
+}
+```
+
+![1623984355080](img/SE/10/1623984355080.png)
+
+> 3. 哪些类型可以有Class对象
+
+- class：外部类，成员（成员内部类，静态内部类），局部内部类，匿名内部类。
+- interface：接口
+- []：数组
+- enum：枚举
+- annotation：注解@interface 
+- primitive type：基本数据类型
+- void
+
+```java
+package github.Annotation.Demo02;
+
+import java.lang.annotation.ElementType;
+
+/**
+ * 所有类型的Class
+ * @author subeiLY
+ * @create 2021-06-07 14:50
+ */
+public class TestAllTypeClass {
+    public static void main(String[] args) {
+        Class c1 = Object.class;    // 类
+        Class c2 = Comparable.class;    // 接口
+        Class c3 = String[].class; // 一维数组
+        Class c4 = int[][].class; // 二维数组
+        Class c5 = Override.class; // 注解
+        Class c6 = ElementType.class; // 美剧
+        Class c7 = Integer.class; // 基本数据类型
+        Class c8 = void.class; // void
+        Class c9 = Class.class; // class
+        
+        System.out.println(c1);
+        System.out.println(c2);
+        System.out.println(c3);
+        System.out.println(c4);
+        System.out.println(c5);
+        System.out.println(c6);
+        System.out.println(c7);
+        System.out.println(c8);
+        System.out.println(c9);
+
+        // 只要元素类型与维度一样,就是同一个Class
+        int[] a = new int[10];
+        int[] b = new int[100];
+        System.out.println(a.getClass().hashCode());
+        System.out.println(b.getClass().hashCode());
+
+    }
+}
+```
+
+![1623984754698](img/SE/10/1623984754698.png)
+
+#### 3.类的加载与ClassLoader
+
+> 1. Java内存分析
+
+![1623984921311](img/SE/10/1623984921311.png)
+
+> 2. 类的加载
+
+- 当程序主动使用某个类时，如果该类还未被加载到内存中，则系统会通过如下三个步骤来对该类进行初始化。
+
+![1623985015772](img/SE/10/1623985015772.png)
+
+- 加载：将 class文件字节码內容加载到内存中，并将这些静态数据转换成方法区的运行时数据结构，然后生成一个代表这个类的 java. lang . Class对象。
+- 链接：将Java类的二进制代码合并到JVM的运行状态之中的过程。
+  - 验证：确保加载的类信息符合JVM规范，没有安全方面的问题。
+  - 准备：正式为类变量（ static）分配内存并设置类变量默认初始值的阶段，这些内存都将在方法区中进行分配。
+  - 解析：虚拟机常量池内的符号引用（常量名）替换为直接引用（地址）的过程。
+- 初始化：
+  - 执行类构造器< clinit>貟方法的过程。类构造器< clinit>O方法是由编译期自动收集类中所有类变量的赋值动作和静态代码块中的语句合并产生的。（类构造器是构造类信息的，不是构造该类对象的构造器）。
+  - 当初始化一个类的时候，如果发现其父类还没有进行初始化，则需要先触发其父类的初始化。
+  - 虛拟机会保证一个类的< clinit >()方法在多线程环境中被正确加锁和同步。
+-  [深刻理解类加载](https://blog.csdn.net/m0_38075425/article/details/81627349) 
+
+```java
+package github.Annotation.Demo02;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-07 14:57
+ */
+public class Test05 {
+    public static void main(String[] args) {
+        A a = new A();
+        System.out.println(A.m);
+        /*
+        1. 加载到内存,会产生一个类对应Class对象
+        2. 链接,连接结束后m=0
+        3. 初始化
+           <clinit>(){
+                System.out.println("A类静态代码块初始化");
+                m = 300;
+                m = 100;
+         }
+         */
+    }
+}
+class A{
+    static{
+        System.out.println("A类静态代码块初始化");
+        m=300;
+    }
+
+    static int m=100;
+
+    public A(){
+        System.out.println("A类无参构造初始化");
+    }
+}
+```
+
+![1624017347968](img/SE/10/1624017347968.png)
+
+> 3. 什么时候会发生类初始化
+
+- 类的主动引用（一定会发生类的初始化）
+  - 当虚拟机启动，先初始化main方法所在的类；
+  - new一个类的对象；
+  - 调用类的静态成员（除了fina常量）和静态方法；
+  - 使用 java. lang. reflect包的方法对类进行反射调用；
+  - 当初始化一个类，如果其父类没有被初始化，则先会初始化它的父类。
+- 类的被动引用（不会发生类的初始化）
+  - 当访问一个静态域时，只有真正声明这个域的类才会被初始化。如：当通过子类引用父类的静态变量，不会导致子类初始化；
+  - 通过数组定义类引用，不会触发此类的初始化；
+  - 引用常量不会触发此类的初始化（常量在链接阶段就存入调用类的常量池中了）。
+
+```java
+package github.Annotation.Demo02;
+
+/**
+ * 测试类什么时候会初始化
+ * @author subeiLY
+ * @create 2021-06-07 15:07
+ */
+public class TestActiveReference {
+    static{
+        System.out.println("Main类被加载！");
+    }
+
+    public static void main(String[] args) throws ClassNotFoundException {
+
+//        1. 主动调用
+        Son son = new Son();
+        
+//        反射也会产生主动引用
+        Class.forName("github.Annotation.Demo02.Son");
+
+//        不会产生类的引用的方法
+        System.out.println(Son.b);
+
+        Son[] array = new Son[5];
+
+        System.out.println(Son.a);
+    }
+}
+
+class Father{
+    static final int b=2;
+    static {
+        System.out.println("父类被加载");
+    }
+}
+
+class Son extends Father{
+    static {
+        System.out.println("子类被加载");
+        m=100;
+    }
+
+    static int m=300;
+    static final int a=1;
+}
+```
+
+![1624018588916](img/SE/10/1624018588916.png)
+
+> 4. 类加载器的作用
+
+- 类加载的作用：将 class文件字节码内容加载到内存中，并将这些静态数据转换成方法区的运行时数据结构，然后在堆中生成一个代表这个类的 java. lang Class对象，作为方法区中类数据的访问入口。
+- 类缓存：标准的 JavaSe类加载器可以按要求查找类，但一旦某个类被加载到类加载器中，它将维持加载（缓存）一段时间。不过丿M垃圾回收机制可以回收这些 Classi对象
+
+![1624019279736](img/SE/10/1624019279736.png)
+
+- 类加载器作用是用来把类（αlass）装载进内存的。丿VM规范定义了如下类型的类的加载器。
+
+![1624019353417](img/SE/10/1624019353417.png)
+
+- ClassLoader systemClassLoader = ClassLoader.getSystemClassLoader();//获取系统类的加载器
+- ClassLoader parent = systemClassLoader.getParent();//获取系统类加载器的父类加载器–>扩展类加载器 jre1.8.0_91\lib\ext
+- ClassLoader parent1 = parent.getParent();//获取扩展类加载器父类加载器–>根加载器(c/c++) jre1.8.0_91\lib\rt.jar
+
+```java
+package github.Annotation.Demo02;
+
+/**
+ * 类加载器
+ * @author subeiLY
+ * @create 2021-06-07 15:21
+ */
+public class TestClassLoader1 {
+    public static void main(String[] args) throws ClassNotFoundException {
+        // 获取系统类的加载器
+        ClassLoader systemClassLoader = ClassLoader.getSystemClassLoader();
+        System.out.println(systemClassLoader);
+
+        // 获取系统类加载器的父类加载器-->扩展类加载器    jre1.8.0_91\lib\ext
+        ClassLoader parent = systemClassLoader.getParent();
+        System.out.println(parent);
+
+        // 获取扩展类加载器父类加载器-->根加载器(c/c++)  jre1.8.0_91\lib\rt.jar
+        ClassLoader parent1 = parent.getParent();
+        System.out.println(parent1);
+
+        // 测试当前类是哪个加载器加载的
+        ClassLoader classLoader = Class.forName("github.Annotation.Demo02.TestClassLoader1").getClassLoader();
+        System.out.println(classLoader);
+
+        // 测试JDK内置的类是谁加载的
+        classLoader = Class.forName("java.lang.Object").getClassLoader();
+        System.out.println(classLoader);
+
+        // 如何获得系统类加载器可以加载的路径
+        System.out.println(System.getProperty("java.class.path"));
+
+        // 双亲委派机制  检测安全性 你写的类和跟加载器一样的不会用你写的类
+        // java.lang.String -->往上推
+
+        /*
+        F:\java\JDK\jre\lib\charsets.jar;
+        F:\java\JDK\jre\lib\deploy.jar;
+        F:\java\JDK\jre\lib\ext\access-bridge-64.jar;
+        F:\java\JDK\jre\lib\ext\cldrdata.jar;
+        F:\java\JDK\jre\lib\ext\dnsns.jar;
+        F:\java\JDK\jre\lib\ext\jaccess.jar;
+        F:\java\JDK\jre\lib\ext\jfxrt.jar;
+        F:\java\JDK\jre\lib\ext\localedata.jar;
+        F:\java\JDK\jre\lib\ext\nashorn.jar;
+        F:\java\JDK\jre\lib\ext\sunec.jar;
+        F:\java\JDK\jre\lib\ext\sunjce_provider.jar;
+        F:\java\JDK\jre\lib\ext\sunmscapi.jar;
+        F:\java\JDK\jre\lib\ext\sunpkcs11.jar;
+        F:\java\JDK\jre\lib\ext\zipfs.jar;
+        F:\java\JDK\jre\lib\javaws.jar;
+        F:\java\JDK\jre\lib\jce.jar;
+        F:\java\JDK\jre\lib\jfr.jar;
+        F:\java\JDK\jre\lib\jfxswt.jar;
+        F:\java\JDK\jre\lib\jsse.jar;
+        F:\java\JDK\jre\lib\management-agent.jar;
+        F:\java\JDK\jre\lib\plugin.jar;
+        F:\java\JDK\jre\lib\resources.jar;
+        F:\java\JDK\jre\lib\rt.jar;
+        F:\java\IDEA2020.2\Study\out\production\Study;
+        F:\java\JDK\jre\lib\commons-io-2.6.jar;
+        F:\java\IDEA2020.2\IntelliJ IDEA 2020.2.2\lib\idea_rt.jar
+
+         */
+    }
+}
+```
+
+#### 4.获取运行类的完整结构
+
+- 通过反射获取运行时类的完整结构
+- Field、 Method、 Constructor.、 Superclass、 Interface、 Annotation
+- 实现的全部接口
+- 所继承的父类
+- 全部的构造器
+- 全部的方法
+- 全部的Feld
+- 注解
+- ……
+
+```java
+package github.Annotation.Demo03;
+
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+
+/**
+ *
+ * @author subeiLY
+ * @create 2021-06-07 15:34
+ */
+public class TestClassInfo {
+    public static void main(String[] args) throws ClassNotFoundException, NoSuchFieldException, NoSuchMethodException {
+        Class c1 = Class.forName("github.Annotation.Demo03.User");
+        User user = new User();
+        c1 = user.getClass();
+
+        // 获得类的名字
+        System.out.println(c1.getName());// 获得包名 + 类名
+        System.out.println(c1.getSimpleName());// 获得类名
+
+        System.out.println("=======================");
+
+        // 获得类的属性
+        Field[] fields = c1.getFields();// 只能找到public属性
+        for (Field field : fields) {
+            System.out.println("getFields:" + field);
+        }
+        fields = c1.getDeclaredFields();// 找到全部的属性
+        for (Field field : fields) {
+            System.out.println("getDeclaredFields:" + field);
+        }
+        // 获得指定属性的值
+        Field name = c1.getDeclaredField("name");
+        System.out.println(name);
+
+        System.out.println("=======================");
+
+        // 获得类的方法
+        Method[] methods = c1.getMethods(); // 获得本类及父类的全部public方法
+        for (Method method : methods) {
+            System.out.println("getMethods:" + method);
+        }
+        methods = c1.getDeclaredMethods(); // 获得本类的所有方法
+        for (Method method : methods) {
+            System.out.println("getDeclaredMethods:" + method);
+        }
+        System.out.println("=======================");
+        // 获得指定的方法
+        // 重载
+        Method getName = c1.getMethod("getName", null);
+        Method setName = c1.getMethod("setName", String.class);
+        System.out.println(getName);
+        System.out.println(setName);
+        // 获得类的构造器
+        System.out.println("=======================");
+        Constructor[] constructors = c1.getConstructors();
+        for (Constructor constructor : constructors) {
+            System.out.println("getConstructors:" + constructor);
+        }
+        constructors = c1.getDeclaredConstructors();
+        for (Constructor constructor : constructors) {
+            System.out.println("getDeclaredConstructors:" + constructor);
+        }
+        // 获得指定的构造器
+        Constructor declaredConstructor = c1.getDeclaredConstructor(String.class, int.class, int.class);
+        System.out.println("指定构造器" + declaredConstructor);
+    }
+}
+```
+
+- 在实际的操作中，取得类的信息的操作代码，并不会经常开发。
+- 一定要熟悉 java. lang .reflect包的作用，反射机制。
+- 如何取得属性、方法、构造器的名称，修饰符等。
+
+#### 5.调用运行时类的指定结构
+
+> 1. 有Class对象,能做什么
+
+- 创建类的对象：调用 Class对象的 newInstance()方法
+  - 1）类必须有一个无参数的构造器。
+  - 2）类的构造器的访问权限需要足够。
+- 思考？难道没有无参的构造器就不能创建对象了吗？只要在操作的时候明确的调用类中的构造器，并将参数传递进去之后，才可以实例化操作。
+- 步骤如下：
+  - 1）通过class类的 getDeclaredConstructor（ Class…， parameterTypes）取得本类的指定形参类型的构造器；
+  - 2）向构造器的形参中传递一个对象数组进去，里面包含了构造器中所需的各个参数。
+  - 3）通过 Constructo实例化对象
+
+> 2. 方法及使用
+
+```java
+package github.Annotation.Demo03;
+
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+
+/**
+ * 动态的创建对象,通过反射
+ * @author subeiLY
+ * @create 2021-06-07 15:46
+ */
+public class TestDynamicCreateObject {
+    public static void main(String[] args) throws ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException, NoSuchFieldException {
+        // 获得Class对象
+        Class c1 = Class.forName("github.Annotation.Demo03.User");
+
+        // 构造一个对象
+        User user = (User) c1.newInstance();    // 本质上调用了类的无参构造器
+        System.out.println(user);
+
+        // 通过构造器创建对象
+        Constructor constructor = c1.getDeclaredConstructor(String.class, int.class, int.class);
+        User user1 = (User) constructor.newInstance("光荣时代",001,17);
+        System.out.println(user1);
+
+        // 通过反射调用普通方法
+        User user2 = (User) c1.newInstance();
+        // 通过反射获取一个方法
+        Method setName = c1.getDeclaredMethod("setName", String.class);
+        // invoke:激活
+        // (对象,"方法值")
+        setName.invoke(user2, "some");
+        System.out.println(user2.getName());
+
+        // 通过反射操作属性
+        User user3 = (User) c1.newInstance();
+        Field name = c1.getDeclaredField("name");
+
+        // 不能直接操作私有属性,我们需要关闭程序的安全检测,属性或方法的setAccessible(true)
+        // 设置安全检测
+        name.setAccessible(true);
+
+        name.set(user3, "some2");
+        System.out.println(user3.getName());
+    }
+}
+```
+
+![1624031340429](img/SE/10/1624031340429.png)
+
+- 通过反射，调用类中的方法，通过 Method类完成。
+  - ①通过Cas类的 getMethod（ String name, Class... parameterTypes）方法取得一个 Method对象，并设置此方法操作时所需要的参数类型。
+  - ②之后使用 Object invoke（ Object obj，Object[] args）进行调用，并向方法中传递要设置的ob对象的参数信息。
+
+![1624031853684](img/SE/10/1624031853684.png)
+
+> 调用指定的方法：
+
+- Object invoke（object obj, Object. args）
+- Object对应原方法的返回值，若原方法无返回值，此时返回null；
+- 若原方法若为静态方法，此时形参 Object obj可为null；
+- 若原方法形参列表为空，则 Object[] args为null；
+- 若原方法声明为 private，则需要在调用此 invoke（）方法前，显式调用方法对象的setAccessible（true）方法，将可访问 private的方法。
+
+> setAccessible 
+
+- Method和 Field、 Constructor对象都有 setAccessible()方法。
+- setAccessible作用是启动和禁用访问安全检查的开关。
+- 参数值为true则指示反射的对象在使用时应该取消Java语言访问检査。
+  - 提高反射的效率。如果代码中必须用反射，而该句代码需要频繁的被调用，那么请设置为true；
+  - 使得原本无法访问的私有成员也可以访问；
+- 参数值为false则指示反射的对象应该实施Java语言访问检查。
 
 
+> 3. 性能检测
 
+```java
+package github.Annotation.Demo03;
 
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 
+/**
+ * 分析性能问题
+ * @author subeiLY
+ * @create 2021-06-07 15:59
+ */
+public class TestPerformance {
+    // 普通方式调用
+    public static void test01() {
+        User user = new User();
+        long startTime = System.currentTimeMillis();
 
+        for (int i = 0; i < 1000000000; i++) {
+            user.getName();
+        }
 
+        long endTime = System.currentTimeMillis();
+        System.out.println("普通方式执行10亿次:" + (endTime - startTime) + "ms");
+    }
+
+    // 反射方式调用
+    public static void test02() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
+        User user = new User();
+        Class c1 = user.getClass();
+        Method getName = c1.getDeclaredMethod("getName", null);
+        long startTime = System.currentTimeMillis();
+
+        for (int i = 0; i < 1000000000; i++) {
+            getName.invoke(user,null);
+        }
+
+        long endTime = System.currentTimeMillis();
+        System.out.println("反射方式执行10亿次:" + (endTime - startTime) + "ms");
+    }
+
+    // 反射方式调用,关闭检测
+    public static void test03() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
+        User user = new User();
+        Class c1 = user.getClass();
+        Method getName = c1.getDeclaredMethod("getName", null);
+        getName.setAccessible(true);
+        long startTime = System.currentTimeMillis();
+
+        for (int i = 0; i < 1000000000; i++) {
+            getName.invoke(user,null);
+        }
+
+        long endTime = System.currentTimeMillis();
+        System.out.println("反射方式执行10亿次,关闭检测:" + (endTime - startTime) + "ms");
+    }
+
+    public static void main(String[] args) throws NoSuchMethodException, IllegalAccessException, InvocationTargetException {
+        test01();
+        test02();
+        test03();
+    }
+}
+```
+
+#### 6.反射操作泛型
+
+- Java采用泛型擦除的机制来引入泛型，Java中的泛型仅仅是给编译器jvac使用的，确保数据的安全性和免去强制类型转换问题，但是，一旦编译完成，所有和泛型有关的类型全部擦除。
+- 为了通过反射操作这些类型，Java新增了 ParameterizedType, GenericArray Type, Type Variable和 WildcardType几种类型来代表不能被归一到clas类中的类型但是又和原始类型齐名的类型。
+- ParameterizedType：表示一种参数化类型，比如 Collection< String>
+- GenericArray Type：表示一种元素类型是参数化类型或者类型变量的数组类型；
+- Type Variable：是各种类型变量的公共父接口；
+- WildcardType：代表一种通配符类型表达式。
+
+```java
+package github.Annotation.Demo03;
+
+import java.lang.reflect.Method;
+import java.lang.reflect.ParameterizedType;
+import java.lang.reflect.Type;
+import java.util.List;
+import java.util.Map;
+
+/**
+ * 通过反射获取泛型
+ * @author subeiLY
+ * @create 2021-06-07 16:03
+ */
+public class Test01 {
+    public void test02(Map<String,User> map, List<User> list){
+        System.out.println("test02");
+    }
+
+    public Map<String,User> test03(){
+        System.out.println("Test03");
+        return null;
+    }
+
+    public static void main(String[] args) throws NoSuchMethodException {
+        Method method = Test01.class.getMethod("test02", Map.class, List.class);
+
+        Type[] genericParameterTypes = method.getGenericParameterTypes();
+        for (Type genericParameterType : genericParameterTypes){
+            System.out.println("#" + genericParameterType);
+            if(genericParameterType instanceof ParameterizedType){
+                Type[] typeArguments = ((ParameterizedType) genericParameterType).getActualTypeArguments();
+                for (Type typeArgument : typeArguments){
+                    System.out.println(typeArgument);
+                }
+            }
+        }
+
+        method = Test01.class.getMethod("test03", null);
+        Type returnType = method.getGenericReturnType();
+        if(returnType instanceof ParameterizedType){
+            Type[] typeArguments = ((ParameterizedType) returnType).getActualTypeArguments();
+            for (Type typeArgument : typeArguments){
+                System.out.println(typeArgument);
+            }
+        }
+
+    }
+}
+```
+
+#### 7.反射操作注解
+
+- getAnnotations 
+- getAnnotation
+
+![1624032004542](img/SE/10/1624032004542.png)
+
+```java
+package github.Annotation.Demo03;
+
+import java.lang.annotation.*;
+import java.lang.reflect.Field;
+
+/**
+ * 练习反射操作注解
+ * @author subeiLY
+ * @create 2021-06-07 16:21
+ */
+public class TestORM {
+    public static void main(String[] args) throws ClassNotFoundException, NoSuchFieldException {
+        Class c1 = Class.forName("github.Annotation.Demo03.Student2");
+        //通过反射获取注解
+        Annotation[] annotations = c1.getAnnotations();
+        for (Annotation annotation : annotations) {
+            System.out.println(annotation);
+        }
+
+        //获得注解value
+        TableDoris tableDoris = (TableDoris) c1.getAnnotation(TableDoris.class);
+        String value = tableDoris.value();
+        System.out.println(value);
+
+        //获得类指定的注解
+        Field name = c1.getDeclaredField("name");
+        FiledDoris annotation = name.getAnnotation(FiledDoris.class);
+        System.out.println(annotation.columnName());
+        System.out.println(annotation.type());
+        System.out.println(annotation.length());
+    }
+}
+
+@TableDoris("db_student")
+class Student2 {
+    @FiledDoris(columnName = "db_id", type = "int", length = 10)
+    private int id;
+    @FiledDoris(columnName = "db_age", type = "int", length = 3)
+    private int age;
+    @FiledDoris(columnName = "db_name", type = "varchar", length = 200)
+    private String name;
+
+    public Student2() {
+    }
+
+    public Student2(int id, int age, String name) {
+        this.id = id;
+        this.age = age;
+        this.name = name;
+    }
+
+    @Override
+    public String toString() {
+        return "Student2{" +
+                "id=" + id +
+                ", age=" + age +
+                ", name='" + name + '\'' +
+                '}';
+    }
+
+    public int getId() {
+        return id;
+    }
+
+    public void setId(int id) {
+        this.id = id;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+}
+
+// 类名注解
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@interface TableDoris {
+    String value();
+}
+
+// 属性注解
+@Target(ElementType.FIELD)
+@Retention(RetentionPolicy.RUNTIME)
+@interface FiledDoris {
+    String columnName();
+    String type();
+
+    int length();
+}
+```
 
 ## SE总结
 
@@ -13967,11 +17075,777 @@ public class URLDemo02 {
 
 ## JVM入门
 
+**面试常见**：
+
+1. 请你谈谈你对JVM的理解?
+2. java8虚拟机和之前的变化更新?
+3. 什么是OOM，什么是栈溢出StackOverFlowError? 怎么分析?
+4. JVM的常用调优参数有哪些?
+5. 内存快照如何抓取？怎么分析Dump文件？
+6. 谈谈JVM中，类加载器你的认识？
+
+### 1.JVM的位置
+
+![1624091891954](img/SE/11/1624091891954.png)
+
+**三种JVM:**
+
+- Sun公司：HotSpot 用的最多
+- BEA：JRockit
+- IBM：J9VM
+
+我们学习都是：**HotSpot**
+
+### 2.JVM的体系结构
+
+![1624171818762](img/SE/11/1624171818762.png)
+
+- **jvm调优：99%都是在方法区和堆，大部分时间调堆。** JNI（java native interface）本地方法接口。 
+
+ ![img](img/SE/11/webp.png) 
+
+### 3.类加载器
+
+-  作用：加载Class文件——如果new Student();（具体实例在堆里，引用变量名放栈里） 。
+-  先来看看一个类加载到 JVM 的一个基本结构：
+
+![1624172801081](img/SE/11/1624172801081.png)
+
+- 类是模板，对象是具体的，通过new来实例化对象。car1，car2，car3，名字在栈里面，真正的实例，具体的数据在堆里面，栈只是引用地址。
+
+1. 虚拟机自带的加载器
+2. 启动类（根）加载器
+3. 扩展类加载器
+4. 应用程序加载器
+
+```java
+package github.JVM.Demo01;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-08 07:42
+ */
+public class Test01 {
+    public static void main(String[] args) {
+        Test01 test01 = new Test01();
+        Test01 test02 = new Test01();
+        Test01 test03 = new Test01();
+
+        System.out.println(test01.hashCode());
+        System.out.println(test02.hashCode());
+        System.out.println(test03.hashCode());
+/*
+1836019240
+325040804
+1173230247
+ */
+
+        Class<? extends Test01> aClass1 = test01.getClass();
+
+        ClassLoader classLoader = aClass1.getClassLoader();
+        System.out.println(classLoader);
+        System.out.println(classLoader.getParent());
+        System.out.println(classLoader.getParent().getParent());
+/*
+sun.misc.Launcher$AppClassLoader@18b4aac2
+sun.misc.Launcher$ExtClassLoader@330bedb4
+null
+ */
+
+        Class<? extends Test01> aClass2 = test02.getClass();
+        Class<? extends Test01> aClass3 = test03.getClass();
+
+        System.out.println(aClass1.hashCode());
+        System.out.println(aClass2.hashCode());
+        System.out.println(aClass3.hashCode());
+        /*
+        2133927002
+        2133927002
+        2133927002
+         */
+    }
+}
+```
+
+**类加载器的分类**
+
+- Bootstrap ClassLoader 启动类加载器
+- Extention ClassLoader 标准扩展类加载器
+- Application ClassLoader 应用类加载器
+- User ClassLoader 用户自定义类加载器
+
+### 4.双亲委派机制
+
+```java
+package java.lang;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-08 08:06
+ */
+public class String {
+    /*
+    双亲委派机制:安全
+    1.APP-->EXC-->BOOT(最终执行)
+    BOOT
+    EXC
+    APP
+     */
+    public String toString() {
+        return "Hello";
+    }
+
+    public static void main(String[] args) {
+        String s = new String();
+        System.out.println(s.getClass());
+        s.toString();
+    }
+    /*
+    1.类加载器收到类加载的请求
+    2.将这个请求向上委托给父类加载器去完成，一直向上委托，知道启动类加载
+    3.启动加载器检查是否能够加载当前这个类，能加载就结束，使用当前的加载器，否则，抛出异常，适知子加载器进行加载
+    4.重复步骤3
+     */
+}
+```
+
+- idea报了一个错误：
+
+![1624174797480](img/SE/11/1624174797480.png)
+
+> 这是因为，在运行一个类之前，首先会在应用程序加载器(APP)中找，如果APP中有这个类，继续向上在扩展类加载器EXC中找，然后再向上，在启动类( 根 )加载器BOOT中找。如果在BOOT中有这个类的话，最终执行的就是根加载器中的。如果BOOT中没有的话，就会倒找往回找。
+
+**过程总结**
+
+- 1.类加载器收到类加载的请求
+
+- 2.将这个请求向上委托给父类加载器去完成，一直向上委托，直到启动类加载器
+
+- 3.启动类加载器检查是否能够加载当前这个类，能加载就结束，使用当前的加载器，否则，抛出异常，一层一层向下，通知子加载器进行加载
+
+- 4.重复步骤3
+
+- 关于**双亲委派机制**的博客：
+
+  [你确定你真的理解“双亲委派“了吗？！](https://hollis.blog.csdn.net/article/details/112462198?utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-11.control&dist_request_id=1329188.24840.16179780332075587&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-11.control) 
+
+-----
+
+[面试官：java双亲委派机制及作用](https://www.jianshu.com/p/1e4011617650)
+
+- ==概念==：当某个类加载器需要加载某个.class文件时，它首先把这个任务委托给他的上级类加载器，递归这个操作，如果上级的类加载器没有加载，自己才会去加载这个类。
+
+- ==例子==：当一个Hello.class这样的文件要被加载时。不考虑我们自定义类加载器，首先会在AppClassLoader中检查是否加载过，如果有那就无需再加载了。如果没有，那么会拿到父加载器，然后调用父加载器的loadClass方法。父类中同理也会先检查自己是否已经加载过，如果没有再往上。注意这个类似递归的过程，直到到达Bootstrap classLoader之前，都是在检查是否加载过，并不会选择自己去加载。直到BootstrapClassLoader，已经没有父加载器了，这时候开始考虑自己是否能加载了，如果自己无法加载，会下沉到子加载器去加载，一直到最底层，如果没有任何加载器能加载，就会抛出ClassNotFoundException。
+
+ ![img](img/SE/11/1522745-20200120151442841-989063742.png) 
+
+==作用==：
+
+1. 防止重复加载同一个.class。通过委托去向上面问一问，加载过了，就不用再加载一遍。保证数据安全。
+2. 保证核心.class不能被篡改。通过委托方式，不会去篡改核心.class，即使篡改也不会去加载，即使加载也不会是同一个.class对象了。不同的加载器加载同一个.class也不是同一个Class对象。这样保证了Class执行安全。
+
+> 比如：如果有人想替换系统级别的类：String.java。篡改它的实现，在这种机制下这些系统的类已经被Bootstrap classLoader加载过了（为什么？因为当一个类需要加载的时候，最先去尝试加载的就是BootstrapClassLoader），所以其他类加载器并没有机会再去加载，从一定程度上防止了危险代码的植入。
+
+### 5.沙箱安全机制
+
+	Java安全模型的核心就是Java沙箱(sandbox)，什么是沙箱?沙箱是一个限制程序运行的环境。沙箱机制就是将Java代码限定在虚拟机(JVM)特定的运行范围中，并且严格限制代码对本地系统资源访问，通过这样的措施来保证对代码的有效隔离，防止对本地系统造成破坏。沙箱**主要限制系统资源访问**，那系统资源包括什么?CPU、内存、文件系统、网络。不同级别的沙箱对这些资源访问的限制也可以不一样。
+	
+	所有的Java程序运行都可以指定沙箱，可以定制安全策略。
+	
+	在]ava中将执行程序分成本地代码和远程代码两种，本地代码默认视为可信任的，而远程代码则被看作是不受信的。对于授信的本地代码，可以访问一切本地资源。而对于非授信的远程代码在早期的ava实现中，安全依赖于沙箱(Sandbox)机制。如下图所示JDK1.0安全模型。
+
+![image-20210410110304887](img/SE/11/image-20210410110304887.png)
+
+	 但如此严格的安全机制也给程序的功能扩展带来障碍，比如当用户希望远程代码访问本地系统的文件时候，就无法实现。因此在后续的Java1.1 版本中，针对安全机制做了改进，增加了安全策略，允许用户指定代码对本地资源的访问权限。如下图所示JDK1.1安全模型。
+
+![image-20210410110500553](img/SE/11/image-20210410110500553.png)
+
+	在Java1.2版本中，再次改进了安全机制，增加了代码签名。不论本地代码或是远程代码，都会按照用户的安全策略设定，由类加载器加载到虚拟机中权限不同的运行空间，来实现差异化的代码执行权限控制。如下图所示JDK1.2安全模型。
+
+<img src="img/SE/11/image-20210410110621464.png" alt="image-20210410110621464" style="zoom:67%;" />
+
+	当前最新的安全机制实现，则引入了域(Domain)的概念。虚拟机会把所有代码加载到不同的系统域和应用域，系统域部分专门负责与关键资源进行交互，而各个应用域部分则通过系统域的部分代理来对各种需要的资源进行访问。虚拟机中不同的受保护域(Protected Domain)，对应不一样的权限(Permission)。存在于不同域中的类文件就具有了当前域的全部权限，如下图所示最新的安全模型(jdk 1.6)。
+
+<img src="img/SE/11/image-20210410110904684.png" alt="image-20210410110904684" style="zoom:67%;" />
+
+**组成沙箱的基本组件**:
+
+- `字节码校验器`(bytecode verifier)︰确保Java类文件遵循lava语言规范。这样可以帮助lava程序实现内存保护。但并不是所有的类文件都会经过字节码校验，比如核心类。
+
+- 类装载器(class loader) :其中类装载器在3个方面对Java沙箱起作用：
+
+  。它防止恶意代码去干涉善意的代码;
+  。它守护了被信任的类库边界;
+  。它将代码归入保护域，确定了代码可以进行哪些操作。
+
+        虚拟机为不同的类加载器载入的类提供不同的命名空间，命名空间由一系列唯一的名称组成，每一个被装载的类将有一个名字，这个命名空间是由Java虚拟机为每一个类装载器维护的，它们互相之间甚至不可见。
+
+**类装载器采用的机制是双亲委派模式。**
+
+1.从最内层VM自带类加载器开始加载，外层恶意同名类得不到加载从而无法使用;
+
+2.由于严格通过包来区分了访问域，外层恶意的类通过内置代码也无法获得权限访问到内层类，破坏代码就自然无法生效。
+
+- 存取控制器(access controller)︰存取控制器可以控制核心API对操作系统的存取权限，而这个控制的策略设定，可以由用户指定。
+- 安全管理器(security manager)︰是核心API和操作系统之间的主要接口。实现权限控制，比存取控制器优先级高。
+- 安全软件包(security package) : java.security下的类和扩展包下的类，允许用户为自己的应用增加新的安全特性，包括:
+  - 安全提供者
+  - 消息摘要
+  - 数字签名
+  - 加密
+  - 鉴别
+
+### 6.Native
+
+- 编写一个多线程类启动。
+
+```java
+ public static void main(String[] args) { 
+            new Thread(()->{ },"your thread name").start(); 
+ }
+```
+
+- 点进去看start方法的源码：
+
+```java
+public synchronized void start() {
+      
+        if (threadStatus != 0)
+            throw new IllegalThreadStateException();
+
+        group.add(this);
+
+        boolean started = false;
+        try {
+            start0();	// 调用了一个start0方法
+            started = true;
+        } finally {
+            try {
+                if (!started) {
+                    group.threadStartFailed(this);
+                }
+            } catch (Throwable ignore) {
+              
+            }
+        }
+    }
+	// 这个Thread是一个类，这个方法定义在这里是不是很诡异！看这个关键字native；
+    private native void start0();
+```
+
+- **凡是带了native关键字的，说明 java的作用范围达不到，去调用底层C语言的库！**
+
+- **JNI：Java Native Interface（Java本地方法接口）**
+
+- 凡是带了native关键字的方法就会进入本地方法栈；
+
+- **Native Method Stack** 本地方法栈
+
+- 本地接口的作用是融合不同的编程语言为Java所用，它的初衷是融合C/C++程序，Java在诞生的时候是C/C++横行的时候，想要立足，必须有调用C、C++的程序，于是就在内存中专门开辟了一块区域处理标记为native的代码，它的具体做法是 在 Native Method Stack 中登记native方法，在 ( ExecutionEngine ) 执行引擎执行的时候加载Native Libraies。
+
+- 目前该方法使用的越来越少了，除非是与硬件有关的应用，比如通过Java程序驱动打印机或者Java系统管理生产设备，在企业级应用中已经比较少见。因为现在的异构领域间通信很发达，比如可以使用Socket通信，也可以使用Web Service等等，不多做介绍！
+
+### 7.PC寄存器
+
+**程序计数器：**Program Counter Register
+
+- 每个线程都有一个程序计数器，是线程私有的，就是一个指针，指向方法区中的方法字节码(用来存储指向像一条指令的地址，也即将要执行的指令代码)，在执行引擎读取下一条指令，是一个非常小的内存空间，几乎可以忽略不计。
+
+### 8.方法区
+
+**Method Area 方法区**
+
+![1624178870929](img/SE/11/1624178870929.png)
+
+- 方法区是被所有线程共享，所有字段和方法字节码，以及一些特殊方法，如构造函数，接口代码也在此定义，简单说，所有定义的方法的信息都保存在该区域，**此区域属于共享区间;**
+
+- ==静态变量、常量、类信息(构造方法、接口定义)、运行时的常量池存在方法区中，但是实例变量存在堆内存中，和方法区无关==。
+
+- static ，final ，Class ，常量池~
+
+### 9.栈
+
+- 在计算机流传有一句废话： 程序 = 算法 + 数据结构
+
+- 但是对于大部分同学都是： 程序 = 框架 + 业务逻辑
+- 栈：后进先出 / 先进后出
+
+- 队列：先进先出（FIFO : First Input First Output）
+
+<img src="img/SE/11/image-20210412153258254.png" alt="image-20210412153258254" style="zoom:67%;" />
+
+**栈管理程序运行**
+
+- 存储一些基本类型的值、对象的引用、方法等。
+
+- **栈的优势是，存取速度比堆要快，仅次于寄存器，栈数据可以共享。**
+
+思考：为什么main方法最后执行！为什么一个test() 方法执行完了，才会继续走main方法！
+
+<img src="img/SE/11/image-20210412153612934.png" alt="image-20210412153612934" style="zoom: 67%;" />
+
+> **喝多了吐就是栈，吃多了拉就是队列**。
+
+说明：
+
+- 1、栈也叫栈内存，主管Java程序的运行，是在线程创建时创建，它的生命期是跟随线程的生命期，线程结束栈内存也就释放。
+
+- 2、**对于栈来说不存在垃圾回收问题**，只要线程一旦结束，该栈就Over，生命周期和线程一致，是线程私有的。
+
+- 3、方法自己调自己就会导致栈溢出（递归死循环测试）。
+
+**栈里面会放什么东西那？**
+
+- 8大基本类型 + 对象的引用 + 实例的方法
+
+> **栈运行原理**
+
+- Java栈的组成元素——栈帧。
+
+- 栈帧是一种用于帮助虚拟机执行方法调用与方法执行的数据结构。他是独立于线程的，一个线程有自己的一个栈帧。封装了方法的局部变量表、动态链接信息、方法的返回地址以及操作数栈等信息。
+
+- 第一个方法从调用开始到执行完成，就对应着一个栈帧在虚拟机栈中从入栈到出栈的过程。
+
+> 当一个方法A被调用时就产生了一个栈帧F1，并被压入到栈中，A方法又调用了B方法，于是产生了栈帧F2也被压入栈中，B方法又调用了C方法，于是产生栈帧F3也被压入栈中	执行完毕后，先弹出F3， 然后弹出F2，在弹出F1........
+
+- 遵循 “先进后出” / "后进先出" 的原则。
+
+<img src="img/SE/11/image-20210412154905868.png" alt="image-20210412154905868" style="zoom: 80%;" />
+
+- 栈满了，抛出异常：stackOverflowError
+
+<img src="img/SE/11/image-20210412160952117.png" alt="image-20210412160952117" style="zoom:67%;" />
+
+- 对象实例化的过程。
+
+### 10.三种JVM
+
+- Sun公司HotSpot java Hotspot™64-Bit server vw (build 25.181-b13，mixed mode)
+- BEA JRockit
+- IBM 39 VM
+- 我们学习都是：Hotspot
+
+![1624179540458](img/SE/11/1624179540458.png)
+
+### 11.堆
+
+**Java7**之前
+
+- Heap 堆，一个JVM实例只存在一个堆内存，堆内存的大小是可以调节的。
+- 类加载器读取了类文件后，需要把类，方法，常变量放到堆内存中，保存所有引用类型的真实信息，以方便执行器执行。
+- 堆内存分为三部分：
+  - 新生区 Young Generation Space Young/New
+  - 养老区 Tenure generation space Old/Tenure
+
+  - 永久区 Permanent Space Perm
+
+- 堆内存逻辑上分为三部分：新生，养老，永久（元空间 : JDK8 以后名称）。
+
+<img src="img/SE/11/image-20210412165729382.png" alt="image-20210412165729382" style="zoom:67%;" />
+
+**谁空谁是to**
+
+- **GC**垃圾回收主要是在新生区和养老区，又分为轻GC 和 重GC，如果内存不够，或者存在死循环，就会导致![img](img/SE/11/wps1-1618218451924.png)
+- 在JDK8以后，永久存储区改了个名字(元空间)。
+
+![image-20210413192515497](img/SE/11/image-20210413192515497.png)
+
+### 12.新生区、养老区
+
+- 新生区是类诞生，成长，消亡的区域，一个类在这里产生，应用，最后被垃圾回收器收集，结束生命。
+
+- 新生区又分为两部分：伊甸区（Eden Space）和幸存者区（Survivor Space），所有的类都是在伊甸区被new出来的，幸存区有两个：0区 和 1区，当伊甸园的空间用完时，程序又需要创建对象，JVM的垃圾回收器将对伊甸园区进行垃圾回收（Minor GC）。将伊甸园中的剩余对象移动到幸存0区，若幸存0区也满了，再对该区进行垃圾回收，然后移动到1区，那如果1区也满了呢？（这里幸存0区和1区是一个互相交替的过程）再移动到养老区，若养老区也满了，那么这个时候将产生MajorGC（Full GC），进行养老区的内存清理，若养老区执行了Full GC后发现依然无法进行对象的保存，就会产生OOM异常 “OutOfMemoryError ”。如果出现 java.lang.OutOfMemoryError：java heap space异常，说明Java虚拟机的堆内存不够，原因如下：
+  - 1、Java虚拟机的堆内存设置不够，可以通过参数 -Xms（初始值大小），-Xmx（最大大小）来调整。
+
+  - 2、代码中创建了大量大对象，并且长时间不能被垃圾收集器收集（存在被引用）或者死循环。
+
+### 13.永久区（Perm）
+
+- 永久存储区是一个常驻内存区域，用于存放JDK自身所携带的Class，Interface的元数据，也就是说它存储的是运行环境必须的类信息，被装载进此区域的数据是不会被垃圾回收器回收掉的，关闭JVM才会释放此区域所占用的内存。
+- 如果出现 java.lang.OutOfMemoryError：PermGen space，说明是 Java虚拟机对永久代Perm内存设置不够。一般出现这种情况，都是程序启动需要加载大量的第三方jar包，
+- 例如：在一个Tomcat下部署了太多的应用。或者大量动态反射生成的类不断被加载，最终导致Perm区被占满。
+
+**注意：**
+
+- JDK1.6之前： 有永久代，常量池1.6在方法区；
+- JDK1.7： 有永久代，但是已经逐步 “去永久代”，常量池1.7在堆；
+- JDK1.8及之后：无永久代，常量池1.8在元空间。
+
+**熟悉三区结构后方可学习**JVM垃圾回收机制
+
+- 实际而言，方法区（Method Area）和堆一样，是各个线程共享的内存区域，它用于存储虚拟机加载的：类信息+普通常量+静态常量+编译器编译后的代码，虽然JVM规范将方法区描述为**堆的一个逻辑部分，但它却还有一个别名，叫做Non-Heap（非堆），目的就是要和堆分开**。
+
+- 对于HotSpot虚拟机，很多开发者习惯将方法区称之为 “永久代（Parmanent Gen）”，但严格本质上说两者不同，或者说使用永久代实现方法区而已，永久代是方法区（相当于是一个接口interface）的一个实现，Jdk1.7的版本中，已经将原本放在永久代的字符串常量池移走。
+
+- 常量池（Constant Pool）是方法区的一部分，Class文件除了有类的版本，字段，方法，接口描述信息外，还有一项信息就是常量池，这部分内容将在类加载后进入方法区的运行时常量池中存放！
+
+![](img/SE/11/image-20210413194818596.png)
+
+### 14.堆内存调优
+
+- ==-Xms==：设置初始分配大小，默认为物理内存的 “1/64”。
+- ==-Xmx==：最大分配内存，默认为物理内存的 “1/4”。
+- ==-XX:+PrintGCDetails==：输出详细的GC处理日志。
+
+> 测试1
+
+**代码测试**
+
+```java
+public class Demo01 {
+    public static void main(String[] args) {
+        // 返回虚拟机试图使用的最大内存
+        long max = Runtime.getRuntime().maxMemory();    // 字节：1024*1024
+        // 返回jvm的总内存
+        long total = Runtime.getRuntime().totalMemory();
+
+        System.out.println("max=" + max + "字节\t" + (max/(double)1024/1024) + "MB");
+
+        System.out.println("total=" + total + "字节\t" + (total/(double)1024/1024) + "MB");
+
+        // 默认情况下:分配的总内存是电脑内存的1/4,初始化的内存是电脑的1/64
+
+    }
+}
+```
+
+- **IDEA**中进行VM调优参数设置，然后启动。
+
+![1624266807320](img/SE/11/1624266807320.png)
+
+![1624266743537](img/SE/11/1624266743537.png)
+
+- 发现，默认的情况下分配的内存是总内存的 1/4，而初始化的内存为 1/64 ！
+
+```java
+-Xms1024m -Xmx1024m -XX:+PrintGCDetails
+```
+
+- VM参数调优：把初始内存，和总内存都调为 1024M，运行，查看结果！
+
+![1624266898950](img/SE/11/1624266898950.png)
+
+- 来大概计算分析一下！ 
+
+![1624267012539](img/SE/11/1624267012539.png)
+
+- 再次证明：元空间并不在虚拟机中，而是使用本地内存。
+
+> 测试2
+
+代码：
+
+```java
+package github.JVM.Demo02;
+
+import java.util.Random;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-08 10:22
+ */
+public class Demo02 {
+    public static void main(String[] args) {
+        String str = "suneiLY";
+        while (true) {
+            str += str + new Random().nextInt(88888888)
+                    + new Random().nextInt(999999999);
+        }
+    }
+}
+```
+
+- vm参数：
+
+```java
+-Xms8m -Xmx8m -XX:+PrintGCDetails
+```
+
+- 测试，查看结果！
+
+![1624267311233](img/SE/11/1624267311233.png)
+
+- 这是一个young 区域撑爆的JAVA 内存日志，其中 PSYoungGen 表示 youngGen分区的变化1536k 表示 GC 之前的大小。
+
+- 488k 表示GC 之后的大小。
+
+- 整个Young区域的大小从 1536K 到 672K , young代的总大小为 7680K。
+
+  ![img](img/SE/11/wps13.png) 
+
+- user – 总计本次 GC 总线程所占用的总 CPU 时间。
+
+- sys – OS 调用 or 等待系统时间。
+
+- real – 应用暂停时间。
+
+- 如果GC 线程是 Serial Garbage Collector 串行搜集器的方式的话（只有一条GC线程,）， real time 等于user 和 system 时间之和。
+
+- 通过日志发现Young的区域到最后 GC 之前后都是0，old 区域 无法释放，最后报堆溢出错误。
+
+**其他文章链接**
+
+- [一文读懂 - 元空间和永久代](https://juejin.cn/post/684490402096480257)
+- [Java方法区、永久代、元空间、常量池详解](https://blog.csdn.net/u011635492/article/details/81046174?utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-2.control&dist_request_id=1331647.219.16183160373688617&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-2.control)
+
+### 15.GC
+#### 1.Dump内存快照
+
+        在运行java程序的时候，有时候想测试运行时占用内存情况，这时候就需要使用测试工具查看了。在eclipse里面有 **Eclipse Memory Analyzer tool(MAT)**插件可以测试，而在idea中也有这么一个插件，就是**JProfiler**，一款性能瓶颈分析工具！
+
+**作用**：
+
+- 分析Dump文件，快速定位内存泄漏；
+
+- 获得堆中对象的统计数据
+
+- 获得对象相互引用的关系
+
+- 采用树形展现对象间相互引用的情况
+
+![image-20210415152719180](img/SE/11/image-20210415152719180.png)
+
+> 安装JProﬁler
+
+1. IDEA插件安装
+
+![1624268021039](img/SE/11/1624268021039.png)
+
+2. 安装JProﬁler监控软件
+
+- 下载地址：[https://www.ej-technologies.com/download/jproﬁler/version_92](https://www.ej-technologies.com/download/jprofiler/version_92)
+
+![1624267906776](img/SE/11/1624267906776.png)
+
+3. 下载完双击运行，选择自定义目录安装，点击Next。
+
+- 注意：安装路径，**建议选择一个文件名中没有中文，没有空格的路径** ，否则识别不了。然后一直点Next。
+
+![1624268395234](img/SE/11/1624268395234.png)
+
+4. 注册
+
+```java
+// 注册码仅供大家参考
+L-Larry_Lau@163.com#23874-hrwpdp1sh1wrn#0620
+L-Larry_Lau@163.com#36573-fdkscp15axjj6#25257
+L-Larry_Lau@163.com#5481-ucjn4a16rvd98#6038
+L-Larry_Lau@163.com#99016-hli5ay1ylizjj#27215
+L-Larry_Lau@163.com#40775-3wle0g1uin5c1#0674
+```
+
+5. 配置IDEA运行环境
+
+- Settings–Tools–JProﬂier–JProﬂier executable选择JProﬁle安装可执行文件。（如果系统只装了一个版本， 启动IDEA时会默认选择）保存。
+
+![1624268549728](img/SE/11/1624268549728.png)
+
+- 代码测试：
+
+```java
+package github.JVM.Demo02;
+
+import java.util.ArrayList;
+
+/**
+ * @author subeiLY
+ * @create 2021-06-08 11:13
+ */
+public class Demo03 {
+    byte[] byteArray = new byte[1*1024*1024]; // 1M = 1024K
 
 
+    public static void main(String[] args) {
+        ArrayList<Demo03> list = new ArrayList<>();
+        int count = 0;
+        try {
+            while (true) {
+                list.add(new Demo03());  // 问题所在
+                count = count + 1;
+            }
+        } catch (Error e) {
+            System.out.println("count:" + count);
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+- vm参数 ： `-Xms1m -Xmx8m -XX:+HeapDumpOnOutOfMemoryError`
+
+![1624268764318](img/SE/11/1624268764318.png)
+
+- 寻找文件：
+
+   ![1624268912503](img/SE/11/1624268912503.png)
+
+> 使用 Jproﬁler 工具分析查看
+
+双击这个文件默认使用 Jproﬁler 进行 Open大的对象！
+
+![1624268999291](img/SE/11/1624268999291.png)
+
+![1624269093434](img/SE/11/1624269093434.png)
+
+![1624270120587](img/SE/11/1624270120587.png)
+
+- 从软件开发的角度上，dump文件就是当程序产生异常时，用来记录当时的程序状态信息（例如堆栈的状态），用于程序开发定位问题。
+
+#### 2.GC四大算法
+
+##### 1.引用计数法
+
+<img src="img/SE/11/image-20210415154058132.png" alt="image-20210415154058132" style="zoom:80%;" />
+
+- 每个对象有一个引用计数器，当对象被引用一次则计数器加1，当对象引用失效一次，则计数器减1，对于计数器为0的对象意味着是垃圾对象，可以被GC回收。
+
+- 目前虚拟机基本都是采用可达性算法，从GC  Roots  作为起点开始搜索，那么整个连通图中的对象边都是活对象，对于GC Roots 无法到达的对象变成了垃圾回收对象，随时可被GC回收。
+
+##### 2.复制算法
+
+- 年轻代中使用的是Minor GC，采用的就是复制算法（Copying）。
+
+**什么是复制算法？**
+
+<img src="img/SE/11/image-20210415154352529.png" alt="image-20210415154352529" style="zoom:67%;" />
+
+- Minor GC 会把Eden中的所有活的对象都移到Survivor区域中，如果Survivor区中放不下，那么剩下的活的对象就被移动到Old generation中，**也就是说，一旦收集后，Eden就是变成空的了**
+
+- 当对象在Eden（包括一个Survivor区域，这里假设是From区域）出生后，在经过一次Minor GC后，如果对象还存活，并且能够被另外一块Survivor区域所容纳 （上面已经假设为from区域，这里应为to区域，即to区域有足够的内存空间来存储Eden 和 From 区域中存活的对象），则使用**复制算法**将这些仍然还活着的对象复制到另外一块Survivor区域（即 to 区域）中，然后清理所使用过的Eden 以及Survivor 区域（即form区域），并且将这些对象的年龄设置为1，以后对象在Survivor区，每熬过一次MinorGC，就将这个对象的年龄 + 1，当这个对象的年龄达到某一个值的时候（默认是15岁，通过- XX:MaxTenuringThreshold 设定参数）这些对象就会成为老年代。
+
+- `-XX:MaxTenuringThreshold`	任期门槛=>设置对象在新生代中存活的次数
+
+> 面试题：如何判断哪个是to区呢？一句话：**谁空谁是to**
+
+<img src="img/SE/11/image-20210415155111210.png" alt="image-20210415155111210" style="zoom:67%;" />
+
+**原理解释：**
+
+- 年轻代中的GC，主要是复制算法（Copying）
+
+- HotSpot JVM 把年轻代分为了三部分：一个 Eden 区 和 2 个Survivor区（from区 和 to区）。默认比例为 8:1:1，一般情况下，新创建的对象都会被分配到Eden区（一些大对象特殊处理），这些对象经过第一次Minor GC后，如果仍然存活，将会被移到Survivor区，对象在Survivor中每熬过一次Minor GC ， 年龄就会增加1岁，当它的年龄增加到一定程度时，就会被移动到年老代中，因为年轻代中的对象基本上  都是朝生夕死，所以在年轻代的垃圾回收算法使用的是复制算法！复制算法的思想就是将内存分为两块，每次只用其中一块，当这一块内存用完，就将还活着的对象复制到另外一块上面。复制算法不会产  生内存碎片！
+
+<img src="img/SE/11/wps6.png" alt="img" style="zoom:67%;" />
+
+- 在GC开始的时候，对象只会在Eden区和名为 “From” 的Survivor区，Survivor区“TO” 是空的，紧接着进行GC，Eden区中所有存活的对象都会被复制到 “To”，而在 “From” 区中，仍存活的对象会更具他们的年龄值来决定去向。
+- 年龄达到一定值的对象会被移动到老年代中，没有达到阈值的对象会被复制到  “To 区域”，经过这次GC后，Eden区和From区已经被清空，这个时候， “From” 和 “To” 会交换他们的角色， 也就是新的 “To” 就是GC前的“From” ， 新的 “From” 就是上次GC前的 “To”。
+- 不管怎样，都会保证名为To 的Survicor区域是空的。 Minor GC会一直重复这样的过程。直到 To 区 被填满 ，“To” 区被填满之后，会将所有的对象移动到老年代中。
+
+<img src="img/SE/11/image-20210415154806495.png" alt="image-20210415154806495" style="zoom:67%;" />
+
+- 因为Eden区对象一般存活率较低，一般的，使用两块10%的内存作为空闲和活动区域，而另外80%的内存，则是用来给新建对象分配内存的。一旦发生GC，将10%的from活动区间与另外80%中存活的Eden 对象转移到10%的to空闲区域，接下来，将之前的90%的内存，全部释放，以此类推；
+
+- 好处：没有内存碎片；坏处：浪费内存空间。
+
+<img src="img/SE/11/image-20210415155511598.png" alt="image-20210415155511598" style="zoom: 67%;" />
+
+**劣势：** 
+
+- 复制算法它的缺点也是相当明显的。
+  - 1、他浪费了一半的内存，这太要命了。
+  - 2、如果对象的存活率很高，我们可以极端一点，假设是100%存活，那么我们需要将所有对象都复制一遍，并将所有引用地址重置一遍。复制这一工作所花费的时间，在对象存活率达到一定程度时，将会变的不可忽视，所以从以上描述不难看出。复制算法要想使用，最起码对象的存活率要非常低才行，而且  最重要的是，我们必须要克服50%的内存浪费。
+
+> 标记清除（Mark-Sweep）
+
+- 回收时，对需要存活的对象进行标记； 
+
+- 回收不是绿色的对象。
+
+<img src="img/SE/11/image-20210415160200159.png" alt="image-20210415160200159" style="zoom: 80%;" />
+
+- 当堆中的有效内存空间被耗尽的时候，就会停止整个程序（也被称为stop the world），然后进行两项工作，第一项则是标记，第二项则是清除。
+
+- 标记：从引用根节点开始标记所有被引用的对象，标记的过程其实就是遍历所有的GC  Roots  ，然后将所有GC Roots 可达的对象，标记为存活的对象。
+
+- 清除： 遍历整个堆，把未标记的对象清除。
+
+- 缺点：这个算法需要暂停整个应用，会产生内存碎片。两次扫描，严重浪费时间。
+
+> 用通俗的话解释一下  标记/清除算法，就是当程序运行期间，若可以使用的内存被耗尽的时候，GC线程就会被触发并将程序暂停，随后将依旧存活的对象标记一遍，最终再将堆中所有没被标记的对象全部清  除掉，接下来便让程序恢复运行。
+
+**劣势：**
+
+1. 首先、它的缺点就是效率比较低（递归与全堆对象遍历），而且在进行GC的时候，需要停止应用  程序，这会导致用户体验非常差劲
+
+2. 其次、主要的缺点则是这种方式清理出来的空闲内存是不连续的，这点不难理解，我们的死亡对象  都是随机的出现在内存的各个角落，现在把他们清除之后，内存的布局自然乱七八糟，而为了应付  这一点，JVM就不得不维持一个内存空间的空闲列表，这又是一种开销。而且在分配数组对象的时  候，寻找连续的内存空间会不太好找。
+
+##### 3.标记压缩
+
+- 标记整理说明：老年代一般是由标记清除或者是标记清除与标记整理的混合实现。
+
+**什么是标记压缩？**
+
+**原理：**
+
+<img src="img/SE/11/image-20210415160536353.png" alt="image-20210415160536353" style="zoom:67%;" />
+
+<img src="img/SE/11/image-20210415160646440.png" alt="image-20210415160646440" style="zoom:67%;" />
+
+- 在整理压缩阶段，不再对标记的对象作回收，而是通过所有存活对象都像一端移动，然后直接清除边界以外的内存。可以看到，标记的存活对象将会被整理，按照内存地址依次排列，而未被标记的内存会被  清理掉，如此一来，当我们需要给新对象分配内存时，JVM只需要持有一个内存的起始地址即可，这比维护一个空闲列表显然少了许多开销。
+
+- 标记、整理算法  不仅可以弥补  标记、清除算法当中，内存区域分散的缺点，也消除了复制算法当中，内存减半的高额代价；
+
+##### 4.标记清除压缩
+
+- 先标记清除几次，再压缩。
+
+<img src="img/SE/11/image-20210415160914621.png" alt="image-20210415160914621" style="zoom:67%;" />
+
+#### 3.总结
+
+- 内存效率：复制算法 > 标记清除算法 > 标记压缩算法 （时间复杂度）； 
+
+- 内存整齐度：复制算法 = 标记压缩算法 > 标记清除算法；
+- 内存利用率：标记压缩算法 = 标记清除算法 > 复制算法；
 
 
+可以看出，效率上来说，复制算法是当之无愧的老大，但是却浪费了太多内存，而为了尽量兼顾上面所  提到的三个指标，标记压缩算法相对来说更平滑一些 ， 但是效率上依然不尽如人意，它比复制算法多了一个标记的阶段，又比标记清除多了一个整理内存的过程。
 
+> 难道就没有一种最优算法吗？
+>
+> 答案： 无，没有最好的算法，只有最合适的算法 。	-----------> 分代收集算法
+
+**年轻代：**（Young Gen）
+
+- 年轻代特点是区域相对老年代较小，对象存活低。
+- 这种情况复制算法的回收整理，速度是最快的。复制算法的效率只和当前存活对象大小有关，因而很适  用于年轻代的回收。而复制算法内存利用率不高的问题，通过hotspot中的两个survivor的设计得到缓解。 
+
+**老年代：**（Tenure Gen）
+
+- 老年代的特点是区域较大，对象存活率高！
+- 这种情况，存在大量存活率高的对象，复制算法明显变得不合适。一般是由标记清除或者是标记清除与标记整理的混合实现。Mark阶段的开销与存活对象的数量成正比，这点来说，对于老年代，标记清除或  者标记整理有一些不符，但可以通过多核多线程利用，对并发，并行的形式提标记效率。Sweep阶段的   开销与所管理里区域的大小相关，但Sweep “就地处决”  的  特点，回收的过程没有对象的移动。使其相对其他有对象移动步骤的回收算法，仍然是是效率最好的，但是需要解决内存碎片的问题。
+
+### 16.JMM
+
+1. 什么是JMM？
+
+   - JMM：（java Memory Model的缩写）
+
+2. 他干嘛的？官方，其他人的博客，对应的视频！
+
+   - 作用：缓存一致性协议，用于定义数据读写的规则(遵守，找到这个规则)。		
+
+   - JMM定义了线程工作内存和主内存之间的抽象关系∶线程之间的共享变量存储在主内存(Main Memory)中，每个线程都有一个私有的本地内存（Local Memory)。
+
+<img src="img/SE/11/image-20210415165941964.png" alt="image-20210415165941964" style="zoom:67%;" />
+
+- 解决共享对象可见性这个问题：volilate
+
+3. 它该如何学习？
+
+   - JMM：抽象的概念，理论。
+
+- [JMM对这八种指令的使用](https://www.cnblogs.com/null-qige/p/9481900.html)，制定了如下规则：
+  - 不允许read和load、store和write操作之一单独出现。即使用了read必须load，使用了store必须write。
+  - 不允许线程丢弃他最近的assign操作，即工作变量的数据改变了之后，必须告知主存。
+  - 不允许一个线程将没有assign的数据从工作内存同步回主内存。
+  - 一个新的变量必须在主内存中诞生，不允许工作内存直接使用一个未被初始化的变量。就是怼变量实施use、store操作之前，必须经过assign和load操作。
+  - 一个变量同一时间只有一个线程能对其进行lock。多次lock后，必须执行相同次数的unlock才能解锁。
+  - 如果对一个变量进行lock操作，会清空所有工作内存中此变量的值，在执行引擎使用这个变量前，必须重新load或assign操作初始化变量的值。
+  - 如果一个变量没有被lock，就不能对其进行unlock操作。也不能unlock一个被其他线程锁住的变量。
+  - 对一个变量进行unlock操作之前，必须把此变量同步回主内存。
+
+　　JMM对这八种操作规则和对[volatile的一些特殊规则](https://www.cnblogs.com/null-qige/p/8569131.html)就能确定哪里操作是线程安全，哪些操作是线程不安全的了。但是这些规则实在复杂，很难在实践中直接分析。所以一般我们也不会通过上述规则进行分析。更多的时候，使用java的happen-before规则来进行分析。
 
 ## JUC
 
